CI images update

--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -199,7 +199,7 @@ url = https://congan.com.vn/quoc-te/thoi-su-quoc-te/chay-trung-tam-thuong-mai-o-
 [bebubam.vn]
 match = 43.5%%
 title = Chăn tuyết cho bé 2 lớp
-url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop?srsltid=AfmBOopN5Tb5kL92-80tZE-6nXUc40H72SA1EuTh0VjUszwNWHjsRB3z
+url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
 
 [cafef.vn]
 match = -18.5%%
