--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -356,3 +356,13 @@ match = -29.2%%
 title = Thành lập Khối thi đua số 3, Binh đoàn 16
 url = https://baobinhphuoc.com.vn/news/386/161144/thanh-lap-khoi-thi-dua-so-3-binh-doan-16
 
+[thhp.vn]
+match = -25.0%%
+title = Đài Phát thanh và Truyền hình Hải Phòng
+url = https://thhp.vn/
+
+[moit.gov.vn]
+match = -83.3%%
+title = Bộ trưởng Nguyễn Hồng Diên làm việc với tỉnh Quảng Ngãi
+url = https://moit.gov.vn/tin-tuc/hoat-dong/chum-anh-bo-truong-nguyen-hong-dien-lam-viec-voi-tinh-quang-ngai.html
+
