--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -247,8 +247,8 @@ title =
 url = https://www.nesoccerjournal.com/girl-academy-playoffs-what-to-know-which-new-england-clubs-are-competing/
 
 [kuseahawks.com]
-match = -230.8%%
-title = Flag Football vs Thomas University (Ga.) on 5/10/2024
+match = -323.1%%
+title = Flag Football vs Thomas University (Ga.) on 5/10/2024 - Box Score
 url = https://kuseahawks.com/sports/flag-football/stats/2024/thomas-university-ga-/boxscore/13595
 
 [georgia.gov]
@@ -332,8 +332,8 @@ title = Deutsch 0462-203-12141 Size 12 Contact 14-12 Ga
 url = https://www.deutschconnectorstore.com/p-85-deutsch-0462-203-12141-contact-14-12-ga.html
 
 [georgiadogs.com]
-match = -92.3%%
-title = Charlie Condon - 2024 - Baseball
+match = -130.8%%
+title = Charlie Condon - 2024 Baseball Roster
 url = https://georgiadogs.com/sports/baseball/roster/charlie-condon/7496
 
 [digital.tcl.sc.edu]
@@ -525,4 +525,9 @@ url = https://www.hcbe.net/
 match = -261.5%%
 title = Chande v Gani (14 of 1999) [2000] MWHC 35 (9 May 2000)
 url = https://malawilii.org/akn/mw/judgment/mwhc/2000/35/eng@2000-05-09
+
+[www.dfwairport.com]
+match = -238.5%%
+title = Welcome to Dallas Fort Worth International Airport
+url = https://www.dfwairport.com/
 
