--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-08-09 02:45:46
+lastsearch = 2024-08-09 03:31:51
 
 [tuananh.vn]
-match = 22.2%%
-title = Đệm Korea Gấm Plus
-url = https://tuananh.vn/dem-korea-gam-plus-p223.html
+match = 12.0%%
+title = Đệm bông ép 3 mảnh Korea Gấm
+url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
 
 [demxanh.com]
-match = -28.0%%
-title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOorwXHQLkQjj1bHLVy8rKxOEIxpNS1TSYHTcgmOi4fxI_uQ0DOpT
+match = 8.0%%
+title = Đệm bông ép Tuấn Anh Korea Gấm Xốp
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam.html
 
 [demkhangduy.com]
 match = 25.0%%
@@ -34,7 +34,7 @@ url = https://shopee.vn/Đệm-lò-xo-túi-kore-Tuấn-Anh-_180x200x24cm_hành-c
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOorTUWmTfwQxDlZ5eYG4WMNTXzUGEDdkWIXDPmZbonaFJT4nB6Tk
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [entershopping.vn]
 match = -36.0%%
@@ -47,9 +47,9 @@ title = Đệm Bông Ép Korea Vải Cotton Tuấn Anh
 url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 
 [suongtuyet.com]
-match = -4.0%%
-title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
-url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
+match = 16.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Cotton
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 
 [www.youtube.com]
 match = -16.7%%
@@ -92,14 +92,14 @@ title = Đệm Korea Gấm Plus sự kết hợp bông Nano kháng khuẩn và .
 url = https://sieuthidemonline.vn/dem-korea-gam-plus/
 
 [www.facebook.com]
-match = -52.0%%
-title = ĐỆM TUẤN ANH - HƯỚNG DẪN SỬ DỤNG ĐỆM LÒ XO TÚI ...
-url = https://www.facebook.com/tuananh.vn/videos/đệm-tuấn-anh-hướng-dẫn-sử-dụng-đệm-lò-xo-túi-cuộn/592113711356270/
+match = -80.0%%
+title = Chợ trời online Bay Area | Vào khoảng tháng 2 tôi có nhận ...
+url = https://www.facebook.com/groups/chotroionlinebayarea/posts/vào-khoảng-tháng-2-tôi-có-nhận-được-1-cuộc-gọi-của-1-em-gái-nhờ-tôi-đưa-ra-sân-b/1500939343845976/
 
 [m.facebook.com]
-match = -48.0%%
-title = Hội người việt ở Kimhe (김해) | Tom hùm 16k 1con
-url = https://m.facebook.com/groups/2515164205371847/posts/3782633085291613/
+match = -72.0%%
+title = Món Ngon Người Việt Houston | Mình muốn mua bột sắn ...
+url = https://m.facebook.com/groups/monngonnvh/posts/5430605216957430/
 
 [www.entershopping.vn]
 match = -20.0%%
@@ -107,9 +107,9 @@ title = Đệm bông ép Tuấn Anh Korea Gấm - chăn ga gối
 url = http://www.entershopping.vn/dem-bong-ep-tuan-anh-korea-gam.html
 
 [www.tiktok.com]
-match = -96.0%%
-title = Let's play together😱❣️ #douyin抖音 #douyin_china #Douyin ...
-url = https://www.tiktok.com/@321douyinlovers/video/7187308403239161115
+match = -92.0%%
+title = Nợ các nàng chiếc clip dưỡng mi chắc gần 1 năm lun gòi á ...
+url = https://www.tiktok.com/@quachanhbenho_/video/7233408559592082694
 
 [m.yelp.com]
 match = -24.0%%
