--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-08-08 21:33:14
+lastsearch = 2024-08-09 03:33:40
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -57,9 +57,9 @@ title = Bộ Chăn Ga Gối Tencel Edena Love 22
 url = https://thegioichanra.com/san-pham/bo-chan-ga-goi-tencel-edena-love-22/
 
 [demxanh.com]
-match = -3.8%%
-title = Bảng giá Chăn ga gối Everhome 2019 mới nhất
-url = https://demxanh.com/chan-ga-goi-dem-everhome.html
+match = 23.1%%
+title = Cửa hàng chăn ga gối cưới Bắc Giang
+url = https://demxanh.com/bo-chan-ga-goi-cuoi-bac-giang.html
 
 [elective.com.vn]
 match = 27.3%%
@@ -107,8 +107,8 @@ title = Bộ Chăn Drap Gối Edena Cotton Solid 362
 url = https://nasago.vn/bo-chan-drap-goi-edena-cotton-solid-362/
 
 [demthienkim.com]
-match = -3.8%%
-title = Chăn ga gối Sông Hồng dòng Home mã H18-056
+match = -53.8%%
+title = Cung cấp chăn ga gối Sông Hồng dòng Home mã H18-056 cao cấp
 url = https://demthienkim.com/chan-ga-goi-h18-056/
 
 [vietnamese.alibaba.com]
