--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-09 02:10:04
+lastsearch = 2024-08-09 03:34:20
 
 [www.diepxuan.com]
-match = 17.9%%
-title = Điệp Xuân Ga chun EPCARLESS 180x200
-url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
+match = -14.3%%
+title = Bộ ga chun chần WarmDream 180x200 HQ - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-chan-warmdream-180x200-hq.html
 
 [www.qcyc.ca]
 match = -53.6%%
