--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-08-09 02:53:45
+lastsearch = 2024-08-09 03:41:14
 
 [shopee.vn]
-match = -52.4%%
-title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
-url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
+match = -76.2%%
+title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 
 [cafeland.vn]
 match = -100.0%%
@@ -74,7 +74,7 @@ url = https://h5.lazada.vn/products/tham-nhung-trai-giuong-loai-2m-x2m2-cac-mau-
 [erado.vn]
 match = 0.0%%
 title = Giường vải nỉ hạng sang mã DV12
-url = https://erado.vn/giuong-giam-gia/giuong-vai-ni-hang-sang-ma-dv12.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-vai-ni-hang-sang-ma-dv12.html?srsltid=AfmBOopo0HNr4wGtz-K49whoNFNR1h6BKs6nxtmyvSKu3RjTKafLdt0S
 
 [www.facebook.com]
 match = 33.3%%
@@ -97,9 +97,9 @@ title = Thảm trải giường Fila - Đà Nẵng
 url = https://suongtuyet.com/tham-trai-giuong-fila
 
 [noithatcaco.vn]
-match = -123.8%%
-title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
-url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
+match = -95.2%%
+title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
+url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOorQTEHK0jQovmpKGd51mJbwy1F3zWBUuuuBhtgQXanXsPW0XpyL
 
 [unmei.com.vn]
 match = -100.0%%
