--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-09 02:12:07
+lastsearch = 2024-08-09 03:42:57
 
 [www.tui.co.uk]
-match = -20.0%%
-title = Inflight Entertainment
-url = https://www.tui.co.uk/info/inflight-entertainment
+match = -7.7%%
+title = Flight Status
+url = https://www.tui.co.uk/flight/arrivals-and-departures
 
 [www.travelgossip.co.uk]
 match = 0.0%%
