CI images update

--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-08 23:46:08
+lastsearch = 2024-08-09 03:54:20
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -67,9 +67,9 @@ title = Chăn ga gối cho nam và sự bất tử của họa tiết sọc kẻ
 url = https://songhonghanoi.vn/chan-ga-goi-cho-nam-va-su-bat-tu-cua-hoa-tiet-soc-ke.html
 
 [www.facebook.com]
-match = -13.6%%
-title = Chăn ga gối đệm - CoCo HOUSE | Vinh Yen
-url = https://www.facebook.com/hoa32/
+match = -68.2%%
+title = COCO 2024 ✔️ Chiếu bọc chun mới nhất của CoCo siêu ...
+url = https://www.facebook.com/groups/151776543537474/posts/-coco-2024️-chiếu-bọc-chun-mới-nhất-của-coco-siêu-bắt-mắt-với-thiết-kế-mới-nhất️/776878567693932/
 
 [foreverbedding.net]
 match = -27.3%%
