--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-09 02:19:05
+lastsearch = 2024-08-09 03:47:13
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -244,7 +244,7 @@ url = https://baosonla.org.vn/the-thao/phong-trao-the-duc-the-thao-o-sop-cop-LcJ
 [books.google.com]
 match = -268.8%%
 title = Phật giáo Nam tông cái vùng Nam bộ - Page 112 - Google Books Result
-url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HyrjS83Q&sig=ACfU3U0woEBCITckMQR929DyAwhHo-ez4A&hl=en&sa=X&ved=2ahUKEwjFyce2kuaHAxUrvokEHRIuH6gQ6AF6BAgaEAM
+url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HyrkN04O&sig=ACfU3U0INGAMelflC0XWnRjSqkXUsyC5-Q&hl=en&sa=X&ved=2ahUKEwjqz4WNouaHAxUlhIkEHdcUIPAQ6AF6BAg3EAM
 
 [daihoc.fpt.edu.vn]
 match = -162.5%%
