--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-09 03:14:49
+lastsearch = 2024-08-09 03:59:12
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
 url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [www.youtube.com]
-match = -104.2%%
-title = Chủ tịch Quốc hội làm việc với tỉnh ủy Đồng Nai | Truyền hình ...
-url = https://www.youtube.com/watch?v=Q27ilq47jwA
+match = -54.2%%
+title = 🔴TRỰC TIẾP 🔴THỜI SỰ 19H VTV1 - 20/3/2024 | ĐÀI ...
+url = https://www.youtube.com/watch?v=Pa-TmxiqHBk
 
 [chieutrucxinh.weebly.com]
 match = -70.8%%
@@ -250,4 +250,9 @@ url = https://www.vsd.vn/vi/ad/173694
 match = 16.7%%
 title = SỞ TÀI CHÍNH TỈNH ĐỒNG THÁP
 url = https://stc.dongthap.gov.vn/
+
+[www.hawacom.vn]
+match = -75.0%%
+title = Công ty nước sạch Hà Nội | Hanoi Water Limited Company
+url = http://www.hawacom.vn/
 
