--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-09 00:11:44
+lastsearch = 2024-08-09 03:45:07
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [nemsaithanh.com]
-match = 57.9%%
-title = Chiếu Trúc Các Loại
-url = https://nemsaithanh.com/chieu-truc-cac-loai/
+match = -10.0%%
+title = Chiếu Trúc
+url = https://nemsaithanh.com/chieu-truc-103.html
 
 [trangvangvietnam.com]
 match = -61.9%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
-match = -47.6%%
-title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-80cm/
+match = -76.2%%
+title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
 
 [thegioichieutruc.com]
 match = -47.6%%
