--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-09 01:43:05
+lastsearch = 2024-08-09 03:48:00
 
 [us.misumi-ec.com]
 match = -350.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA Series
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOop5atB5xy_l8G29stFvmFk8-tq1SbqPGLf1aJKPJslS-7PaaOhP
 
 [www.amazon.com]
 match = -91.7%%
@@ -390,4 +390,9 @@ url = https://medicine.yale.edu/mdphd/people/students/
 match = -91.7%%
 title = Forms & Calendar of Events
 url = https://gastateusbc.com/forms/
+
+[www.ice.gov]
+match = -133.3%%
+title = APPENDIX F – SEVIS LOOKUP TABLES
+url = https://www.ice.gov/doclib/sevis/pdf/batch_api_6.55_10162020_appf.pdf
 
