--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-09 03:22:09
+lastsearch = 2024-08-09 03:46:51
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -17,9 +17,9 @@ title = Đệm bông ép Everhome 2m giá bao nhiêu?
 url = https://demxanh.com/dem-bong-ep-everhome-2m-gia-bao-nhieu.html
 
 [www.ebay.com]
-match = -128.6%%
-title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep Fitted ...
-url = https://www.ebay.com/itm/256190021356
+match = -100.0%%
+title = Everhome 700 TC 100%% Egyptian Cotton Deep Fitted ...
+url = https://www.ebay.com/itm/256326842231
 
 [www.quora.com]
 match = 9.5%%
