--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-09 03:00:00
+lastsearch = 2024-08-09 04:01:42
 
 [www.lazada.vn]
 match = -94.4%%
 title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/?srsltid=AfmBOopth1tDHIjfFY35j1xoHlh8dajNPXFpaojoTcIuDH1dLX3Bhmfn
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
 match = -161.1%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = 11.1%%
-title = Người Việt California
-url = https://www.facebook.com/groups/nvca16/
+match = 5.6%%
+title = Nem Chua Sạch Thắng Tuyến
+url = https://www.facebook.com/NemChuaSachThangTuyen/posts/đầu-tuần-khách-ưu-ái-đặt-nhiều-nem-chua-quá-nhà-em-có-sẵn-nem-ăn-được-luôn-nhé-c/826753272575097/
 
 [voz.vn]
 match = 11.1%%
