--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-08-09 02:34:39
+lastsearch = 2024-08-09 03:46:09
 
 [erado.vn]
 match = 0.0%%
@@ -72,8 +72,8 @@ title = Bộ giường tủ trắng nhập khẩu HFC-BGT R06-18 cao cấp
 url = https://noithathofaco.net/san-pham/bo-giuong-tu-trang-nhap-khau-hfc-bgt-r06-18-cao-cap/
 
 [everonvn.com.vn]
-match = -130.0%%
-title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
+match = -75.0%%
+title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatdaithanh.vn]
