--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-09 00:17:22
+lastsearch = 2024-08-09 03:45:49
 
 [demxanh.com]
 match = 18.2%%
 title = Thảm trải giường lông cừu TLC 04
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html?srsltid=AfmBOorCc8RSWqOfn_Dt5xLksEAlpbr6Kkj3LcOHFBZIgRL9uWRK1f50
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Thảm ghế thảm giường - Trang 7
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-asc&page=7
 
 [decoviet.vn]
-match = 22.2%%
-title = Thảm Sofa Biên Hòa
-url = https://decoviet.vn/tham-sofa-bien-hoa/
+match = -50.0%%
+title = Thảm Lót Ghế Sofa | Thảm Phòng Khách Giá Rẻ
+url = https://decoviet.vn/tham-lot-ghe-sofa/
 
 [demolympia.com]
 match = -40.9%%
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+match = 31.8%%
+title = Điệp Xuân Thảm giường nỉ 200x220
+url = https://www.diepxuan.com/tham-giuong-ni-200x220.html?srsltid=AfmBOopRx0fk_GD2OhrAGX-NuBFr1ImQcw08u4p6L4sh_pzPHQ1eZOKT
 
 [www.lazada.vn]
 match = -77.3%%
