--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-08-09 02:56:34
+lastsearch = 2024-08-09 03:51:31
 
 [demxanh.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Thảm Lì Bali - Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang
 url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010-s11108591003.html?from_gmc=1&fl_tag=1
 
 [tiki.vn]
-match = -47.8%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p33139180.html
+match = -65.2%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
 
 [thegioidemviet.vn]
 match = -104.3%%
@@ -32,9 +32,9 @@ title = Thảm nhung Bali 160x230
 url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 
 [shopee.vn]
-match = -91.3%%
-title = Thảm phòng khách - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm/phòng khách
+match = -117.4%%
+title = thảm lì bali in họa tiết 5d cao cấp trang trí phòng khách ...
+url = https://shopee.vn/Thảm-trải-sàn-thảm-lì-bali-in-họa-tiết-5d-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.401842224.9433903363
 
 [www.noithatpassion.com]
 match = -73.9%%
