CI images update

--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-09 03:56:43
+lastsearch = 2024-08-09 04:18:37
 
 [shopee.vn]
-match = 7.4%%
-title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
+match = -51.9%%
+title = chăn nhung tuyết, chăn nhung loại dày size đại cao cấp ( 3kg
+url = https://shopee.vn/chăn-nhung-tuyết-chăn-nhung-loại-dày-size-đại-cao-cấp-(-3kg-4kg-5kg-)-i.442103984.12041087761
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -159,7 +159,7 @@ url = https://www.sendo.vn/men-long-tuyet.htm
 [www.bebong.vn]
 match = 36.4%%
 title = Chăn lông tuyết cho bé
-url = https://www.bebong.vn/products/chan-long-tuyet-cho-be?srsltid=AfmBOopE_fCuwPbYtL-jTA74hQDN8pFHVLtKbli2rMOoPtnReAtoT229
+url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
 
 [demxanh.com]
 match = -18.5%%
