--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-08 18:58:40
+lastsearch = 2024-08-09 04:20:04
 
 [tiki.vn]
 match = 16.0%%
@@ -67,9 +67,9 @@ title = Phim Đài Loan
 url = https://tvmotchill.com/quoc-gia/phim-dai-loan/
 
 [www.youtube.com]
-match = -56.0%%
-title = "SỐC" VỚI 12 SỰ THẬT THÚ VỊ VỀ ĐÀI LOAN | Cách Trung ...
-url = https://www.youtube.com/watch?v=DWqUd9AkeCo
+match = -52.0%%
+title = Phim Lần Thứ Hai Mình Yêu Nhau tập 12 phim Đài Loan
+url = https://www.youtube.com/watch?v=6BYzIBOpKLw
 
 [znews.vn]
 match = -40.0%%
@@ -300,4 +300,9 @@ url = https://www.taiwan-panorama.com/vi/Articles/Details?Guid=8fe4108f-61c9-4bd
 match = -60.0%%
 title = Phật sự Quốc Tế Đài Loan: Tăng Ni Cư sĩ & Doanh Nhân ...
 url = https://phatsuonline.vn/phat-su-quoc-te-dai-loan-tang-ni-cu-si-and-doanh-nhan-viet-nam-trai-nghiem-giao-luu-tap-doan-phuc-tri-tai-dai-loan-thang-07-2024-82
+
+[www.vaticannews.va]
+match = -4.0%%
+title = Ngày Thánh Mẫu tại Missouri lần thứ 45
+url = https://www.vaticannews.va/vi/church/news/2024-08/ngay-thanh-mau-missouri-lan-thu-45.html
 
