--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-09 02:51:19
+lastsearch = 2024-08-09 04:21:10
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -84,7 +84,7 @@ url = https://shopee.vn/search?keyword=bộ chăn ga gối sông hồng doremon 
 [demxanh.com]
 match = -25.0%%
 title = Chăn Ga Gối Đệm chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/chan-ga-goi-dem.html
+url = https://demxanh.com/chan-ga-goi-dem.html?srsltid=AfmBOooPI3geQm9cA-eWWJ01q3CEo3FnMBAVlWydWPq-18nX9Zr_hSet
 
 [changagoibenlinda.com]
 match = -12.5%%
@@ -180,4 +180,9 @@ url = https://koala.vn/bo-chan-ga-goi-koala-wf-16.html
 match = 8.3%%
 title = Bộ chăn ga gối Sông Hồng Classic mã C16C38
 url = https://khodem.vn/bo-chan-ga-goi-song-hong-classic-ma-c15c29-sao-chep/
+
+[sieuthidemonline.vn]
+match = -45.8%%
+title = Bộ chăn ga gối trẻ em thương hiệu Sông Hồng mã TE17 - 03
+url = https://sieuthidemonline.vn/chan-ga-goi-tre-em-song-hong-e17-03/
 
