--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-09 01:39:54
+lastsearch = 2024-08-09 04:28:47
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
 url = https://changagoidemsonghong.com/chan-ga-goi-bc22
 
 [songhong.info]
-match = -66.7%%
-title = Bộ chăn ga gối cotton 100%% mã màu BC22-063 - Sông Hồng ...
-url = https://songhong.info/chan-ga-goi-bc63
+match = -4.2%%
+title = Bộ chăn ga gối cao cấp Urban mã UC22-020 -
+url = https://songhong.info/chan-ga-goi-uc020
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -53,8 +53,8 @@ url = https://everonhanquoc.vn/everon/13847/bo-chan-ga-goi-epm-23067
 
 [songhongonline.vn]
 match = 26.1%%
-title = Bộ sản phẩm SH_BC22 057
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
+title = Bộ sản phẩm SH_BC22 066
+url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
 
 [dongahome.vn]
 match = -12.5%%
@@ -67,9 +67,9 @@ title = Chăn ga gối Sông Hồng Cao Cấp Urban UC22 024
 url = https://thegioinem.com/chan-ga-goi-song-hong-cao-cap-urban-uc22-024.html
 
 [shopee.vn]
-match = -75.0%%
-title = Bộ ga gối trải giường, Bộ ga giường drap nệm, ga chun đủ ...
-url = https://shopee.vn/Bộ-ga-gối-trải-giường-Bộ-ga-giường-drap-nệm-ga-chun-đủ-mọi-kích-cỡ-1m2-1m4-1m6-1m8-2m-2m2-i.483546614.15837908133
+match = -83.3%%
+title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
+url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [everonletrongtan.com]
 match = 31.8%%
@@ -82,9 +82,9 @@ title = Phụ kiện chăn ga gối - JYSK.vn
 url = https://jysk.vn/phu-kien-chan-ga-goi
 
 [www.facebook.com]
-match = 15.8%%
-title = KZ - Chăn Ấm Đệm Êm
-url = https://www.facebook.com/GachongthamHP/?locale=gl_ES
+match = 20.8%%
+title = Pooh Bedding - Chăn Ga Gối
+url = https://www.facebook.com/poohbedding/?locale=ta_IN
 
 [www.changagoidemeveron.vn]
 match = -12.5%%
@@ -102,9 +102,9 @@ title = HOT Bộ ga gối cotton poly nhiều mẫu ( ib chọn mẫu)còn hàng
 url = https://www.lazada.vn/products/hot-bo-ga-goi-cotton-poly-nhieu-mau-ib-chon-maucon-hang-i1433419140-s5934168211.html?from_gmc=1&fl_tag=1
 
 [www.sendo.vn]
-match = -66.7%%
-title = Bộ Ga Gối Chun Siêu Sang, Giá Khuyến Mãi, Tiết Kiệm Tối ...
-url = https://www.sendo.vn/bo-ga-goi-chun.htm
+match = -33.3%%
+title = BỘ CHĂN GA GỐI COTTON POLY RỪNG XANH MỚI SET 5 MÓN
+url = https://www.sendo.vn/bo-chan-ga-goi-cotton-poly-rung-xanh-moi-set-5-mon-11176307.html
 
 [m.facebook.com]
 match = -26.7%%
@@ -125,4 +125,9 @@ url = https://lasantevn.com/bo-chan-ga-hoa-lan-tay-lasante-phap/
 match = -37.5%%
 title = Bộ Chun chần MS2404 - CÔNG TY CP MADIA HOME
 url = https://madivahome.vn/san-pham/bo-chun-chan-ms2404/
+
+[flexhouse.vn]
+match = -25.0%%
+title = Bộ chăn ga vỏ gối họa tiết trừu tượng ZH6831
+url = https://flexhouse.vn/bo-chan-ga-vo-goi-hoa-tiet-truu-tuong-zh6831
 
