--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-09 02:44:21
+lastsearch = 2024-08-09 04:26:02
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/chan-ga-goi-mau.html
 [shop.chanrathanhthuy.com]
 match = 10.7%%
 title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat?srsltid=AfmBOorIpqMEDOQwxYa2rMQAGkGIc2uJaQX8-_XsH1LWcuT7U8v1Vxlz
 
 [shopee.vn]
 match = -21.4%%
@@ -42,9 +42,9 @@ title = Chăn Ga Gối Nệm Đẹp, Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/bo-vo-chan-goi-ga
 
 [songhong.info]
-match = 35.7%%
-title = Bộ chăn ga gối cao cấp mã UC22-018
-url = https://songhong.info/chan-ga-goi-uc018
+match = -17.9%%
+title = Mẫu chăn ga gối cao cấp dòng Urban mã mầu UC21-008
+url = https://songhong.info/chan-ga-goi-uc08
 
 [cuahangchangagoidem.com]
 match = -7.1%%
