--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-09 03:53:37
+lastsearch = 2024-08-09 04:22:34
 
 [chieutruc.info]
-match = -100.0%%
-title = Bảng giá chiếu cói Xuân Hòa xuất khẩu - hàng Việt Nam cao ...
-url = https://chieutruc.info/chieu-coi-xuan-hoa/
+match = -63.6%%
+title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
+url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
 
 [tiki.vn]
 match = -36.4%%
@@ -22,8 +22,8 @@ title = CAPCUT VIỆT NAM | Mn ơi giúp e vs
 url = https://m.facebook.com/groups/400243538122762/posts/989653909181719/
 
 [nhathuoclongchau.com.vn]
-match = 0.0%%
-title = 
+match = -104.5%%
+title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt?
 url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
 
 [www.vinmec.com]
@@ -42,9 +42,9 @@ title = Chiếu Cói Cao Cấp Nga Sơn
 url = https://www.facebook.com/chieucoiviettrang/
 
 [medlatec.vn]
-match = -109.1%%
-title = Sự phát triển của thai 18 tuần và những thay đổi trên cơ ...
-url = https://medlatec.vn/tin-tuc/su-phat-trien-cua-thai-18-tuan-va-nhung-thay-doi-tren-co-the-thai-phu-s74-n28778
+match = -77.3%%
+title = Bác sĩ giải đáp tỉ mỉ các chỉ số thai nhi theo tuần
+url = https://medlatec.vn/tin-tuc/bac-si-giai-dap-ti-mi-cac-chi-so-thai-nhi-theo-tuan-s74-n23646
 
 [www.lazada.vn]
 match = -40.9%%
