--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-08-09 02:25:47
+lastsearch = 2024-08-09 04:17:55
 
 [demxanh.com]
-match = -3.3%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 6.7%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = -10.0%%
@@ -67,9 +67,9 @@ title =
 url = https://thegioidemtot.vn/434-chieu-dieu-hoa.html
 
 [www.youtube.com]
-match = -46.7%%
-title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
-url = https://www.youtube.com/watch?v=ccaTWASdw7I
+match = -30.0%%
+title = SỰ THẬT| Chiếu điều hòa tencel - Chiếu cao su non có mát ...
+url = https://www.youtube.com/watch?v=OShfCNiOmA8
 
 [fptshop.com.vn]
 match = 0.0%%
