--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-09 02:39:30
+lastsearch = 2024-08-09 04:28:05
 
 [agasound.vn]
 match = 6.7%%
@@ -52,8 +52,8 @@ title = LineaBon D3K2 | Vitamin D3 K2 Tăng chiều cao hiệu quả cho ...
 url = https://www.lineabon.vn/product-page/lineabon-d3k2
 
 [www.diepxuan.com]
-match = 33.3%%
-title = Điệp Xuân Chiếu lác D2 12
+match = 20.0%%
+title = Chiếu lác D2 12 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
