--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-09 02:46:47
+lastsearch = 2024-08-09 04:27:24
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -146.7%%
-title = BRGMart - ☀️𝗛𝗘̣̂ 𝗧𝗛𝗢̂́𝗡𝗚 𝗕𝗔́𝗡 𝗟𝗘̉ 𝗕𝗥𝗚 𝗥𝗘𝗧𝗔𝗜𝗟 - ...
-url = https://www.facebook.com/photo.php?fbid=2221498034823753&id=1515183965455167&set=a.1547878702185693
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -232,9 +232,9 @@ title = DANH SÁCH CÁC TỈNH THÀNH CÓ CƠ SỞ Y TẾ ĐƯỢC ...
 url = https://www.manulife.com.vn/content/dam/insurance/vn/documents/service-docs/quyen-loi-hop-dong-bao-hiem/danh-sach-bao-lanh-vien-phi-tai-viet-nam.pdf
 
 [www.instagram.com]
-match = -220.0%%
-title = The B6 Hà Nội - Đồ Hàn | Có lương về tự dưng thấy ăn ...
-url = https://www.instagram.com/theb6.hanoi/p/C70XOHXvqJ3/
+match = -226.7%%
+title = The B6 Hà Nội - Đồ Hàn | Lạc vào bếp bánh thơm mùi bơ ...
+url = https://www.instagram.com/p/CFD27fHldDQ/
 
 [luatvietnam.vn]
 match = -240.0%%
@@ -445,4 +445,9 @@ url = https://fujimart.vn/dia-chi-cac-chi-nhanh/
 match = -180.0%%
 title = Không gian sống tinh tế, chan hòa cùng thiên nhiên
 url = https://masterisehomes.com/lumiere-boulevard/vn/project
+
+[timbus.vn]
+match = -18.2%%
+title = Luồng tuyến
+url = http://timbus.vn/fleets.aspx
 
