--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-09 02:50:20
+lastsearch = 2024-08-09 04:13:04
 
 [en.wikipedia.org]
-match = 21.7%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = -31.2%%
+title = Gwangju Uprising
+url = https://en.wikipedia.org/wiki/Gwangju_Uprising
 
 [www.britannica.com]
 match = 0.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=f0a0f4e5181b0c32&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjkrt2xleaHAxVbpIkEHettOUIQsZYEegQITxAC
+url = https://www.google.com/search?sca_esv=847412b30e358a21&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjHme3wp-aHAxWUFVkFHd9iERkQsZYEegQIURAC
 
 [produccionesitaca.es]
 match = -21.4%%
@@ -407,9 +407,9 @@ title =
 url = https://www.gn.go.kr/entour/sub05_04_08.do
 
 [www.reuters.com]
-match = -104.3%%
-title = South Korea says 19 citizens held captive in Myanmar ...
-url = https://www.reuters.com/world/asia-pacific/south-korea-says-19-citizens-held-captive-myanmar-rescued-2023-11-14/
+match = -73.9%%
+title = South Korea government to compromise on medical ...
+url = https://www.reuters.com/world/asia-pacific/south-korea-set-adjust-medical-reforms-bid-end-walkout-say-media-reports-2024-04-19/
 
 [m.facebook.com]
 match = -5.6%%
