--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-08-09 03:31:51
+lastsearch = 2024-08-09 04:25:00
 
 [tuananh.vn]
 match = 12.0%%
@@ -12,9 +12,9 @@ title = Đệm bông ép 3 mảnh Korea Gấm
 url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
 
 [demxanh.com]
-match = 8.0%%
-title = Đệm bông ép Tuấn Anh Korea Gấm Xốp
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam.html
+match = -28.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [demkhangduy.com]
 match = 25.0%%
