--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-09 03:20:02
+lastsearch = 2024-08-09 04:18:16
 
 [everonvn.com.vn]
 match = -111.1%%
@@ -24,7 +24,7 @@ url = https://www.reddit.com/r/VietNam/comments/11el4ie/how_do_you_get_vietnames
 [www.facebook.com]
 match = -83.3%%
 title = Chăn ga gối đệm giá rẻ Tiên Tiên | Da Nang
-url = https://www.facebook.com/chuyensigagoi/
+url = https://www.facebook.com/chuyensigagoi/?locale=uk_UA
 
 [muathongminh.vn]
 match = -144.4%%
