CI images update

--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -37,9 +37,9 @@ title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng
 url = https://www.youtube.com/watch?v=uPDPr__M7aI
 
 [www.facebook.com]
-match = 40.9%%
-title = Chiếu Cói Cao Cấp Nga Sơn
-url = https://www.facebook.com/chieucoiviettrang/
+match = 36.4%%
+title = Chiếu Cói Thái Bình | Hanoi
+url = https://www.facebook.com/ChieucoiThaiBinh102/?locale=vi_VN
 
 [medlatec.vn]
 match = -77.3%%
@@ -174,7 +174,7 @@ url = https://ababy.com.vn/chieu-coi-100x60cm-p429.html
 [demxanh.com]
 match = -31.8%%
 title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html?srsltid=AfmBOorEpOE54fUmXixRz1o17K43NpCh2mPhUsJZ1_RCwpIK5J8vvwXg
 
 [tamanhhospital.vn]
 match = -104.5%%
