--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-09 01:47:39
+lastsearch = 2024-08-09 04:43:42
 
 [burningman.org]
 match = -60.0%%
@@ -632,9 +632,9 @@ title = SNAP Eligibility
 url = https://www.fns.usda.gov/snap/recipient/eligibility
 
 [www.facebook.com]
-match = -7.7%%
-title = Ozzy Osbourne
-url = https://www.facebook.com/ozzyosbourne/
+match = -22.2%%
+title = Lady Gaga
+url = https://www.facebook.com/ladygaga/
 
 [ohio.gov]
 match = -280.0%%
@@ -935,4 +935,9 @@ url = https://www.kgw.com/
 match = -18.2%%
 title = Real Madrid
 url = https://www.realmadrid.com/en-US
+
+[www.insurance.ca.gov]
+match = -40.0%%
+title = CA Department of Insurance
+url = https://www.insurance.ca.gov/
 
