--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-08-09 04:25:22
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOooihZUAVQ_w94Vu_NDULZB0kEZG5Uc9ZiJ9cjMKcBr0SlWNFmQW
 
 [www.lazada.vn]
 match = -91.3%%
