--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-09 00:30:39
+lastsearch = 2024-08-09 04:34:46
 
 [everon.com.vn]
 match = 14.8%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22063
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = -5.0%%
-title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
-url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
+match = -44.4%%
+title = Bộ Everon EPM22063
+url = https://everon.online/products/bo-everon-epm-22063
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -42,9 +42,9 @@ title = BỘ CHĂN GA GỐI TRÀ MY KHOE HƯƠNG - EPM24063
 url = https://www.everonvni.vn/bo-chan-ga-goi-tra-my-khoe-huong-epm24063/
 
 [everonhanquoc.vn]
-match = 22.6%%
-title = Bộ chăn ga gối Everon EPM 22063
-url = https://everonhanquoc.vn/everon/13799/bo-chan-ga-goi-everon-epm-22063
+match = 19.4%%
+title = Bộ chăn ga gối Everon EPM-21061
+url = https://everonhanquoc.vn/everon/12742/bo-chan-ga-goi-everon-epm-21061
 
 [yeshomebedding.com]
 match = 6.1%%
@@ -67,9 +67,9 @@ title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Chính Hãng Số 1 Tân 
 url = https://m.facebook.com/story.php/?story_fbid=430777606143789&id=100076346602187
 
 [sieuthidemhanquoc.com.vn]
-match = 24.2%%
-title = Bộ chăn ga gối Everon EPM – 21062
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21062-1504
+match = 21.2%%
+title = Bộ chăn ga gối Everon EPM – 21063
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21063-1508
 
 [everonvn.com.vn]
 match = -47.4%%
