--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-09 01:58:26
+lastsearch = 2024-08-09 04:42:38
 
 [www.bible.com]
-match = 26.7%%
-title = thufingte 20:22
-url = https://www.bible.com/bible/253/PRO.20.22.MIZOVBSI
+match = -64.7%%
+title = Matyu 20 | TPIPNG Bible | YouVersion
+url = https://www.bible.com/bible/3481/MAT.20.TPIPNG
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
