--- a/images/tui-warmdream-180x200x09/config.ini
+++ b/images/tui-warmdream-180x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 lastopen = 2024-06-17 10:35:51
 
 [search]
-lastsearch = 2024-08-08 23:46:29
+lastsearch = 2024-08-09 04:32:46
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOoqaEhnoxWGGTGJuoexNgsrkmmKqb4EygV6wYOVf8FdoioGQP56l
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.cloudynights.com]
 match = -75.0%%
