CI images update

--- a/images/tham-chan-len-xu-1-60x90/config.ini
+++ b/images/tham-chan-len-xu-1-60x90/config.ini
@@ -107,9 +107,9 @@ title = 50 Mẫu Gạch Ốp Chân Tường Đẹp Nhất 2024 & Báo Giá
 url = https://www.vn.weber/vi/blog/gach-op-tuong/nhung-mau-gach-op-chan-tuong-dep-nhat-2023
 
 [m.facebook.com]
-match = -66.7%%
-title = HENRYSTORE - GOM ORDER, SĂN SALE CHINA | [ CN1716 ]
-url = https://m.facebook.com/groups/757635639219807/posts/1005718934411475/
+match = 4.3%%
+title = BIKEN Wedding - Đà Nẵng
+url = https://m.facebook.com/pages/category/Business-service/103497438098166/?locale=ms_MY&_rdr
 
 [taicera.vn]
 match = -83.3%%
@@ -122,9 +122,9 @@ title = Thảm Chùi Chân Nhựa
 url = https://muathongminh.vn/tham-chui-chan-nhua.html
 
 [tinhte.vn]
-match = -70.8%%
-title = Đội bóng Blackberry 87xx Hà Nội | Viết bởi bachkim
-url = https://tinhte.vn/thread/doi-bong-blackberry-87xx-ha-noi.177469/page-107
+match = -54.2%%
+title = Tư vấn giúp em mua sony A6000 hay DSLR nào khác
+url = https://tinhte.vn/thread/tu-van-giup-em-mua-sony-a6000-hay-dslr-nao-khac.2372196/
 
 [gachbetongnhe.com.vn]
 match = -83.3%%
@@ -132,9 +132,9 @@ title = Cách ốp gạch chân tường hướng dẫn dán gạch chân tườ
 url = https://gachbetongnhe.com.vn/cach-op-gach-chan-tuong/
 
 [www.facebook.com]
-match = -66.7%%
-title = Nagdugang si Kama-chan og usa ka bag-ong hulagway.
-url = https://www.facebook.com/photo.php?fbid=2812831635649654&id=2071957683070390&set=a.2094531230813035&locale=cx_PH
+match = -41.7%%
+title = ACHaN studio
+url = https://www.facebook.com/achan.studiomakeup/?locale=sw_KE
 
 [portal.vietcombank.com.vn]
 match = -16.7%%
@@ -165,4 +165,14 @@ url = http://thamachau.vn/tham-nhua-chui-chan-welcome
 match = -54.2%%
 title = Thảm nhựa lau chân chùi chân Welcome 60x90 80x120cm ...
 url = https://www.lazada.vn/products/tham-nhua-lau-chan-chui-chan-welcome-60x90-80x120cm-sach-bui-chong-tron-truot-dung-cho-vi-tri-cong-cong-toa-nha-gia-dinh-i841780107.html
+
+[www.sendo.vn]
+match = -70.8%%
+title = Thảm Nhựa Lau Chân Welcome Chữ Nhật, Thảm Chùi Chân Đủ ...
+url = https://www.sendo.vn/tham-nhua-lau-chan-welcome-chu-nhat-tham-chui-chan-du-kich-co-nhua-pvc-48478716.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1713225600322_undefined_-1_cateLvl2_0_8_23_-1
+
+[thamtraisanlacviet.com]
+match = 8.3%%
+title = Thảm chùi chân nhựa welcome màu ghi
+url = https://thamtraisanlacviet.com/sptv/chui-chan-nhua-welcome-mau-ghi/
 
