--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-09 04:26:02
+lastsearch = 2024-08-09 04:45:08
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -42,9 +42,9 @@ title = Chăn Ga Gối Nệm Đẹp, Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/bo-vo-chan-goi-ga
 
 [songhong.info]
-match = -17.9%%
-title = Mẫu chăn ga gối cao cấp dòng Urban mã mầu UC21-008
-url = https://songhong.info/chan-ga-goi-uc08
+match = 35.7%%
+title = Bộ chăn ga gối cao cấp mã UC22-018
+url = https://songhong.info/chan-ga-goi-uc018
 
 [cuahangchangagoidem.com]
 match = -7.1%%
