--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -27,9 +27,9 @@ title = 常識科
 url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpageid=44&cpmid=176&rurl=https://xn--b1aecnalzhcpg.xn--p1ai/9825461fe43y
 
 [demxanh.com]
-match = 7.1%%
-title = Ga gối Sông Hồng basic TC BT24201
-url = https://demxanh.com/ga-goi-song-hong-basic-tc-bt24201.html
+match = -3.6%%
+title = Ga gối Sông Hồng Basic cotton BC24106
+url = https://demxanh.com/ga-goi-song-hong-basic-cotton-bc24106.html?srsltid=AfmBOoq0MuvY9-BAFACo65lj1gi4Ij5gLtCYgdnYYt7uZAM26nMA1N0i
 
 [stevematuro.com]
 match = -39.3%%
