--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-08-08 20:27:49
+lastsearch = 2024-08-09 04:50:45
 
 [www.tiktok.com]
 match = -5.3%%
@@ -17,9 +17,9 @@ title = 22re/22r - Mechanic told me it was junk : r/ToyotaPickup
 url = https://www.reddit.com/r/ToyotaPickup/comments/12aw6b1/22re22r_mechanic_told_me_it_was_junk/
 
 [www.pirate4x4.com]
-match = -8.3%%
-title = HOW TO: MSD 6A Installation on a 22RE
-url = https://www.pirate4x4.com/threads/how-to-msd-6a-installation-on-a-22re.436107/
+match = -25.0%%
+title = Life beyond 200k miles on 22RE | Page 2
+url = https://www.pirate4x4.com/threads/life-beyond-200k-miles-on-22re.220404/page-2
 
 [www.msextra.com]
 match = -70.8%%
