CI images update

--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-09 05:15:37
+lastsearch = 2024-08-09 06:28:22
 
 [www.everonvn.vn]
 match = -105.0%%
@@ -72,9 +72,9 @@ title = Đệm Sóng Everon
 url = https://everon.online/products/dem-song-everon
 
 [everonxuankhieu.vn]
-match = -105.0%%
-title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ VÀ ...
-url = https://everonxuankhieu.vn/dem-bong-ep-everon/
+match = -90.0%%
+title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ ...
+url = https://everonxuankhieu.vn/dem-bong-ep-everon/?srsltid=AfmBOooWiZ3zhUZw9aClAJIMd9TvZncgsPiX8IlNBwjNACfE2VaE87Pz
 
 [nemgiagoc.vn]
 match = -60.0%%
@@ -155,4 +155,9 @@ url = https://everon365.com/dem-bong-ep-everon-han-quoc/
 match = -40.0%%
 title = Nệm bông ép Everon Padding - Khuyến mãi
 url = https://khonem.com/nem-bong-ep-everon-padding-120-x-195-x-9-cm.html
+
+[everon.com]
+match = -36.4%%
+title = Đệm bông ép
+url = https://everon.com/danh-muc-san-pham/dem-bong-ep
 
