--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-09 04:21:10
+lastsearch = 2024-08-09 06:24:08
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -84,7 +84,7 @@ url = https://shopee.vn/search?keyword=bộ chăn ga gối sông hồng doremon 
 [demxanh.com]
 match = -25.0%%
 title = Chăn Ga Gối Đệm chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/chan-ga-goi-dem.html?srsltid=AfmBOooPI3geQm9cA-eWWJ01q3CEo3FnMBAVlWydWPq-18nX9Zr_hSet
+url = https://demxanh.com/chan-ga-goi-dem.html
 
 [changagoibenlinda.com]
 match = -12.5%%
