--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-08 23:23:29
+lastsearch = 2024-08-09 06:20:35
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -129.4%%
-title = Does KQ Entertainment treat their idols well?
-url = https://www.quora.com/Does-KQ-Entertainment-treat-their-idols-well
+match = -188.2%%
+title = How to audition for SM, YG, JYP, Source Music, Cube and ...
+url = https://www.quora.com/How-do-I-audition-for-SM-YG-JYP-Source-Music-Cube-and-KQ-online-in-2020-Can-you-put-the-links-for-official-sites
 
 [msaniimusicgroup.org]
 match = 0.0%%
