--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-08 23:16:54
+lastsearch = 2024-08-09 06:23:47
 
 [www.muji.com]
-match = 7.1%%
-title = chăn lông nhung xám mỏng
-url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
+match = -33.3%%
+title = RUỘT CHĂN
+url = https://www.muji.com/vn/products/section/E30001
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -102,9 +102,9 @@ title = Muji Rice Bran Pickle
 url = https://www.tiktok.com/discover/muji-rice-bran-pickle
 
 [www.lazada.vn]
-match = -62.5%%
-title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+match = -57.1%%
+title = Chăn Tuyết Muji Giá Tốt T08/2024
+url = https://www.lazada.vn/tag/chan-tuyet-muji/
 
 [sugoimart.com]
 match = -257.1%%
