--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-09 04:34:06
+lastsearch = 2024-08-09 06:20:58
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Chiếu điều hòa mây 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-may-180x200.html
+match = -14.3%%
+title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -29,7 +29,7 @@ url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpagei
 [demxanh.com]
 match = -3.6%%
 title = Ga gối Sông Hồng Basic cotton BC24106
-url = https://demxanh.com/ga-goi-song-hong-basic-cotton-bc24106.html?srsltid=AfmBOoq0MuvY9-BAFACo65lj1gi4Ij5gLtCYgdnYYt7uZAM26nMA1N0i
+url = https://demxanh.com/ga-goi-song-hong-basic-cotton-bc24106.html
 
 [stevematuro.com]
 match = -39.3%%
