--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-09 04:29:16
+lastsearch = 2024-08-09 06:21:41
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -12,9 +12,9 @@ title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
 url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -66.7%%
-title = Ga phủ EPC19056 160x200 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
+match = -9.5%%
+title = Everon Quảng Bình Ga phủ EPM19043 180x200
+url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
 
 [www.diepxuan.com]
 match = -19.0%%
@@ -22,9 +22,9 @@ title = Chiếu cây HT 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [muathongminh.vn]
-match = -142.9%%
-title = Trọn bộ chăn ga gối satin poly 7 món ga phủ trần bông ...
-url = https://muathongminh.vn/tron-bo-chan-ga-goi-satin-poly-7-mon-ga-phu-tran-bong-koseul-san-hang-p.1__7418213403__16397825
+match = -66.7%%
+title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
+url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
 
 [beecost.vn]
 match = -176.2%%
