--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-09 05:36:15
+lastsearch = 2024-08-09 06:13:11
 
 [www.youtube.com]
 match = -420.0%%
@@ -122,9 +122,9 @@ title =
 url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
-match = 0.0%%
-title = 
-url = https://cutiesai.itch.io/14dayswithyou/purchase
+match = -240.0%%
+title = 14 Days With You by cutiesai - Itch.io
+url = https://cutiesai.itch.io/14dayswithyou
 
 [www.koha.net]
 match = 0.0%%
@@ -202,9 +202,9 @@ title = 14 Days With You (Visual Novel) - Male Yanderes
 url = https://maleyanderecafe.tumblr.com/post/687286494613864448/14-days-with-you-visual-novel
 
 [www.britannica.com]
-match = -170.0%%
-title = Ren | Chinese Virtue of Humanity
-url = https://www.britannica.com/topic/ren
+match = 0.0%%
+title = 
+url = https://www.britannica.com/topic/Renaissance-man
 
 [www.metmuseum.org]
 match = -330.0%%
