--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-09 01:41:41
+lastsearch = 2024-08-09 06:14:18
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -27,9 +27,9 @@ title = Kristi Noem
 url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
-match = -108.7%%
-title = Korean Embassy in South Africa 주남아공한국대사관
-url = https://www.facebook.com/KoreanEmbassySouthAfrica/
+match = -52.2%%
+title = Kings of Convenience- KOC - Zenész/együttes
+url = https://www.facebook.com/kingsofconvenience/?locale=hu_HU
 
 [www.cia.gov]
 match = -82.6%%
@@ -117,14 +117,14 @@ title = NEM jumps to a 42 week high – reasons unknown
 url = https://cryptoslate.com/nem-jumps-to-a-42-week-high-reasons-unknown/
 
 [apps.dtic.mil]
-match = -47.8%%
-title = EBB and Flow, November 1950-July 1951 - DTIC
-url = https://apps.dtic.mil/sti/tr/pdf/ADA232745.pdf
+match = -69.6%%
+title = Task Force Smith--A Leadership Failure? - DTIC
+url = https://apps.dtic.mil/sti/tr/pdf/ADA251335.pdf
 
 [www.tiktok.com]
-match = -65.2%%
-title = WHAT COULD’VE BEEN 🥲 #valorant #wearezellsis ...
-url = https://www.tiktok.com/@zellsis/video/7338316197009607966?lang=en
+match = 4.3%%
+title = South Korea League of Legends
+url = https://www.tiktok.com/discover/south-korea-league-of-legends
 
 [30rates.com]
 match = -52.2%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -113.0%%
-title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
-url = https://en.yna.co.kr/view/AEN20180218002800320
+match = -82.6%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -675,4 +675,9 @@ url = http://docs.deerfield.il.us/WebLink/DocView.aspx?id=3870&dbid=0&repo=villa
 match = 8.7%%
 title = CUSTOMER TERMS & CONDITIONS
 url = https://skyjack.com/en-eu/customer-terms-conditions
+
+[dam-oclc.bac-lac.gc.ca]
+match = -26.1%%
+title = HUNGARY AND SOUTH KOREA - bac-lac.gc.ca
+url = https://dam-oclc.bac-lac.gc.ca/download?id=25f26d4e-0fb7-48b9-ae33-6e9b3f4a0443&fileName=9w032401z.PDF
 
