--- a/images/tham-bali-180x230/config.ini
+++ b/images/tham-bali-180x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-180x230.html
 lastopen = 2024-06-07 00:36:20
 
 [search]
-lastsearch = 2024-08-08 23:38:59
+lastsearch = 2024-08-09 06:26:16
 
 [www.noithatpassion.com]
 match = -129.4%%
@@ -94,5 +94,5 @@ url = https://natashaoakleyblog.com/my-bali-adventure/
 [demxanh.com]
 match = -41.2%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOopQp0RGIdk7OO__UaYlCKxgHu5DX5jQ65pbz_ZrJaifd6FQaxip
+url = https://demxanh.com/tham-trai-san-bali.html
 
