--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-08-09 02:49:58
+lastsearch = 2024-08-09 06:16:22
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -64,7 +64,7 @@ url = https://www.khanbongcaocap.com.vn/tham-chui-chan-khach-san
 [www.lazada.vn]
 match = -20.8%%
 title = THẢM CHÙI CHÂN NỈ CỠ LỚN KT 1,2m*1,8m Lau ...
-url = https://www.lazada.vn/products/tham-chui-chan-ni-co-lon-kt-12m18m-lau-chan-soi-len-de-cao-su-chong-tron-truot-dung-cho-sanh-van-phong-toa-nha-khach-san-hien-dai-sang-trong-tham-trai-san-tham-tri-tai-i1910157563.html
+url = https://www.lazada.vn/products/tham-chui-chan-ni-co-lon-kt-12m18m-lau-chan-soi-len-de-cao-su-chong-tron-truot-dung-cho-sanh-van-phong-toa-nha-khach-san-hien-dai-sang-trong-tham-trai-san-tham-tri-tai-i1910157563.html?srsltid=AfmBOooIAPKL3YCk1rxL8LRRwx9e3H_iDYub7TAE1ZUshLlMQI39dgfq
 
 [h5.lazada.vn]
 match = -20.8%%
@@ -84,7 +84,7 @@ url = https://sieuthidienmaypico.com/tham-chui-chan-ariel-mau-xanh-nti272043734.
 [jysk.vn]
 match = -62.5%%
 title = Thảm Chùi Chân Trải Cửa Ra Vào Đẹp, Nhiều Mẫu - JYSK.vn
-url = https://jysk.vn/tham-trai-cua
+url = https://jysk.vn/tham-trai-cua?srsltid=AfmBOoo6h1QLe9DFqMVjValxmviLvj0UoXd3b8ufuBFbI9O-tn87YRC0
 
 [shouse.vn]
 match = -50.0%%
