--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-09 04:44:48
+lastsearch = 2024-08-09 06:23:02
 
 [tuananh.vn]
-match = 20.8%%
-title = Đệm Bông ép 2 mảnh Korea
-url = https://tuananh.vn/dem-bong-ep-2-manh-korea--p133.html
+match = -72.7%%
+title = Đệm bông ép
+url = https://tuananh.vn/dem-bong-ep-c51.html
 
 [demxanh.com]
 match = -48.0%%
