CI images update

--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-09 05:44:32
+lastsearch = 2024-08-09 06:28:53
 
 [shopee.vn]
 match = 4.3%%
@@ -72,9 +72,9 @@ title = chiếu nhựa thái bình gấp đôi 1.0x1.95
 url = https://h5.lazada.vn/products/freeship-max-ma-giam-gia-chieu-nhua-thai-binh-gap-doi-10x195-i1065314875.html
 
 [m.facebook.com]
-match = -43.5%%
-title = Chiếu Cói Thái Bình,Chiếu Nhựa,Chiếu Trúc cao cấp
-url = https://m.facebook.com/p/Chiếu-Cói-Thái-BìnhChiếu-NhựaChiếu-Trúc-cao-cấp-100046868362224/?locale=fr_CA
+match = 85.0%%
+title = Chiếu nhựa Thái Bình
+url = https://m.facebook.com/p/Chiếu-nhựa-Thái-Bình-100083672378137/
 
 [chieu.com.vn]
 match = -117.4%%
@@ -120,4 +120,9 @@ url = http://diennuoctruongphu.vn/san-pham/bon-nhua-thai-binh
 match = 11.1%%
 title = Điện máy Ánh Chinh
 url = https://anhchinh.vn/
+
+[tongkhopolymicapvc.com]
+match = -69.6%%
+title = Tìm hiểu về giá tôn nhựa Thái Bình hôm nay mới - dosi.group
+url = https://tongkhopolymicapvc.com/ton-nhua-11-song-vuong-thai-binh/
 
