--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-08 19:31:12
+lastsearch = 2024-08-09 06:35:53
 
 [demxanh.com]
 match = 37.0%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOooHQWaZTiRCNXv-7RNU7bHhp836iAPmlwEWoLJPiBXWp4164WdZ
+url = https://demxanh.com/chieu-truc-den.html
 
 [demre.com.vn]
 match = 66.7%%
@@ -42,8 +42,8 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 55.6%%
-title = Chiếu trúc Thái đen 160x200 - Điệp Xuân
+match = 63.0%%
+title = Điệp Xuân Chiếu trúc Thái đen 160x200
 url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 
 [shopee.vn]
