--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -122,9 +122,9 @@ title = Home | Occupational Safety and Health Administration
 url = https://www.osha.gov/
 
 [en.wikipedia.org]
-match = -111.8%%
-title = United States Department of Homeland Security
-url = https://en.wikipedia.org/wiki/United_States_Department_of_Homeland_Security
+match = -58.8%%
+title = United States Department of Energy
+url = https://en.wikipedia.org/wiki/United_States_Department_of_Energy
 
 [mtrevenue.gov]
 match = -52.9%%
@@ -202,9 +202,9 @@ title = Ảnh: Màn trình diễn pháo hoa tuyệt đẹp của hai đội Mỹ
 url = https://toquoc.vn/anh-man-trinh-dien-phao-hoa-tuyet-dep-cua-hai-doi-my-va-y-20240615215349092.htm
 
 [www.youtube.com]
-match = -94.1%%
-title = Lil Wuyn, 16 BrT, 16 Typh - TOKYO Cypher
-url = https://www.youtube.com/watch?v=TFmq8zuHBm4
+match = -152.9%%
+title = HOA Docs 101: What you Need to Know - August 16, 2023
+url = https://www.youtube.com/watch?v=FtxiIlzyfuM
 
 [communityassociations.net]
 match = -35.3%%
