--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-09 05:23:34
+lastsearch = 2024-08-09 06:37:17
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -57,9 +57,9 @@ title = Bộ ga chun My Youth - MY16
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my16/
 
 [everonvn.com.vn]
-match = 17.4%%
-title = Bộ chăn ga Everon SR-16
-url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
+match = 35.7%%
+title = Bộ Ga Chun Giảm Giá - Everon
+url = https://everonvn.com.vn/57/bo-ga-chun-giam-gia
 
 [tiki.vn]
 match = 3.6%%
