--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -446,3 +446,8 @@ match = -253.3%%
 title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
+[www.giclandgroup.vn]
+match = -200.0%%
+title = GIC TOWER 168/14 NGUYEN GIA TRI, BINH THANH DISTRICT
+url = http://www.giclandgroup.vn/en/van-phong-cho-thue/gic-tower-16814-nguyen-gia-tri-binh-thanh-district
+
