--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-09 05:42:09
+lastsearch = 2024-08-09 06:44:17
 
 [www.everonvn.vn]
 match = 31.1%%
@@ -14,7 +14,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 [demxanh.com]
 match = 29.8%%
 title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html?srsltid=AfmBOorM-_w3US3_BtBaQJJiPnzo6TTl-vQLhYwxMJ9OZOvX5RqQmZ4o
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -29,7 +29,7 @@ url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
 [everon.com.vn]
 match = 23.4%%
 title = ĐỆM LÒ XO KINGKOIL (MỸ) Showroom Chăn Ga Gối đệm ...
-url = https://everon.com.vn/kingkoil/?srsltid=AfmBOoryJMWctdZypouZcWcO3GELoyGs8UKa_18yloRdpjC9Est-DAb6
+url = https://everon.com.vn/kingkoil/
 
 [sieuthidemhanquoc.com.vn]
 match = 33.3%%
@@ -49,7 +49,7 @@ url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.h
 [www.diepxuan.com]
 match = 31.8%%
 title = Điệp Xuân Nệm lò xo Everon Pocket 180x200x25
-url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-180x200x25.html?srsltid=AfmBOopIhj_zdgC-R46Ztv05spL1mB3ToICy7_DZ3IIHQvAUcwreC0IL
+url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-180x200x25.html
 
 [everon.online]
 match = 31.9%%
