--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -74,7 +74,7 @@ url = https://www.cruisetimetables.com/tuicruises-10apr2024.html
 [www.lightology.com]
 match = -200.0%%
 title = Tui Pendant by David Trubridge - Lightology
-url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441
+url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441&srsltid=AfmBOopaCOuxftymL8NhBdR0rQQ976urIlkNmz-INrb00KHDz4fVt-Li
 
 [vitalimpacts.org]
 match = -91.7%%
