--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -187,9 +187,9 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [pubmed.ncbi.nlm.nih.gov]
-match = -205.3%%
-title = Identification of ten variants associated with risk of estrogen ...
-url = https://pubmed.ncbi.nlm.nih.gov/29058716/
+match = -142.1%%
+title = Intensive blood pressure reduction with intravenous ...
+url = https://pubmed.ncbi.nlm.nih.gov/30739745/
 
 [www.sjsu.edu]
 match = -105.3%%
