CI images update

--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-08-09 04:38:13
+lastsearch = 2024-08-09 08:06:38
 
 [demxanh.com]
 match = -84.2%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html
+url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOoqfO-qV5gsomvuOIwZ2FDNpFJ5Qb5JSDpnmdSjJnMlpbtPUwibo
 
 [thegioidemviet.vn]
 match = -73.7%%
@@ -425,4 +425,9 @@ url = https://quangduc.com/p153a35363/32/kansas-ks
 match = -15.8%%
 title = Toàn cảnh tour Úc siêu khuyến mãi
 url = https://chiakhoadulich.com/tin-noi-bat/toan-canh-tour-uc-sieu-khuyen-mai-152.html
+
+[chumy.vn]
+match = 63.2%%
+title = Tấm trang trí khách sạn
+url = https://chumy.vn/san-pham/trang-tri/?srsltid=AfmBOorWE22M3IC85nztMJC_wCsL1LKdf9YwzRFUJuS7tw4hsY2a_PEO
 
