--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-09 05:39:02
+lastsearch = 2024-08-09 08:09:47
 
 [www.facebook.com]
 match = -164.7%%
@@ -14,12 +14,12 @@ url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-o
 [www.teadrunk.com]
 match = -100.0%%
 title = Buy Chan Cha Red Tea | Chinese Loose Leaf Tea
-url = https://www.teadrunk.com/products/red-tea-chan-cha
+url = https://www.teadrunk.com/products/red-tea-chan-cha?srsltid=AfmBOoq4IYTJegIJfr6uKmXwt6USpqjKAbnBAtHhMsH2_5L2gMiKj_q4
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Chăn Mao Tân 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-mao-tan-4kg.html
+url = https://www.diepxuan.com/chan-mao-tan-4kg.html?srsltid=AfmBOopzeEAZenLX8tzBNTLpHck18YX8qY7V2tn3yFdsXYEtfPQRUa3U
 
 [m.facebook.com]
 match = -194.1%%
