--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-09 05:45:14
+lastsearch = 2024-08-09 08:10:08
 
 [demxanh.com]
 match = 34.5%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [thegioichieutruc.com]
-match = -27.6%%
-title = Chiếu điều hòa cao su non Tencel cam đất chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-cam-dat/
+match = 51.7%%
+title = Chiếu điều hòa cao su non Tencel ghi
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-ghi/
 
 [demchinhhang.com]
 match = -20.7%%
