--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-08-09 02:30:22
+lastsearch = 2024-08-09 08:09:04
 
 [anlacphat.com]
 match = -118.8%%
@@ -12,9 +12,9 @@ title = Đèn Led Chiếu Điểm Thanh Ray DIA808 7W Duhal
 url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia808-7w-duhal/
 
 [thacoanlac.vn]
-match = -55.6%%
-title = FD990-4WD
-url = https://thacoanlac.vn/forland-fd990-4wd
+match = -180.0%%
+title = FD990
+url = https://thacoanlac.vn/forland-fd900
 
 [vietnamese.alibaba.com]
 match = -150.0%%
@@ -47,9 +47,9 @@ title = Hộp chống tĩnh điện
 url = https://qtetech.com/hop-chong-tinh-dien
 
 [www.lazada.vn]
-match = -137.5%%
-title = Chiếu Lác May Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-lac-may/
+match = -200.0%%
+title = Gương một chiều tấm dán Cửa Sổ Màu Vinyl kính tự dính ...
+url = https://www.lazada.vn/products/guong-mot-chieu-tam-dan-cua-so-mau-vinyl-kinh-tu-dinh-phim-cach-nhiet-nang-luong-mat-troi-cua-so-chong-choi-su-rieng-tu-cho-nha-i2421194868.html
 
 [vi.made-in-china.com]
 match = -100.0%%
@@ -59,7 +59,7 @@ url = https://vi.made-in-china.com/co_ti-care/product_Medical-100-Cotton-Pillow-
 [www.diepxuan.com]
 match = -68.8%%
 title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html?srsltid=AfmBOoqIvghPAPofg3xXznofvEriubAlMNTw5PRuDIOZW322ndkwJj97
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
 
 [www.thietbihiepphat.com]
 match = -43.8%%
