--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-09 00:15:15
+lastsearch = 2024-08-09 08:12:54
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -14,7 +14,7 @@ url = https://batdongsan.com.vn/ban-can-ho-chung-cu-chung-cu-d2-giang-vo
 [vinatools.com]
 match = -200.0%%
 title = Kéo cắt tôn dày 1.0mm BESSEY D208, lưỡi cong cắt ...
-url = https://vinatools.com/keo-cat-ton-d208/
+url = https://vinatools.com/keo-cat-ton-d208/?srsltid=AfmBOoqwYbodrzFEorFxlhkROmJhwQzDUkgAoas_CczhXykyyzXQYruu
 
 [shopvnb.com]
 match = -166.7%%
