--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-08-09 05:22:54
+lastsearch = 2024-08-09 08:07:20
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -462,8 +462,8 @@ title = 21596649 Auta, Motor, Brzdy, Riadenie Ventil, Spínač ...
 url = https://scotthahn.sk/branch-191285-Shipping/
 
 [www.hilotherm.com]
-match = -18.2%%
-title = Best-of-Abstract-Vortrag Poster
+match = -54.5%%
+title = Oncology-Research-Treatment-online.pdf
 url = https://www.hilotherm.com/wp-content/uploads/2023/04/Oncology-Research-Treatment-online.pdf
 
 [doe-humangenomeproject.ornl.gov]
