--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-09 03:32:36
+lastsearch = 2024-08-09 08:08:43
 
 [shopee.vn]
 match = -76.2%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 [www.lazada.vn]
 match = -85.7%%
 title = Thảm Lông Cừu Thảm Trải Giường Trải SànTtrần Bông 3 ...
-url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html?srsltid=AfmBOopOpEg8TEymtk9_VsEsFN78cBL9fw9wOr_wdGAz6umls_Kbx_7T
+url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html?srsltid=AfmBOoqL9regrDcKp76yfFClq4bcBmYy2rsT-ug8aLCrobSaUbOpChxp
 
 [tiki.vn]
 match = -38.1%%
@@ -22,9 +22,9 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [flexhouse.vn]
-match = -104.8%%
-title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
-url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
+match = -42.9%%
+title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
+url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [noithatminhkhoi.com]
 match = -57.1%%
@@ -69,7 +69,7 @@ url = https://congtynemthangloi.com/kich-thuoc-giuong-ngu-chuan-pho-bien-hien-na
 [ninhouse.vn]
 match = -76.2%%
 title = Cách tính kích thước ga giường để phù hợp với nệm
-url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOort5HI8nYBPC9gpPeFzxBCveiaogj1ULTeKv5AHPuv_MeNJSW3V
+url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOoqdQEvDi1KegD730tWF4hKEWY8XxxKs5cFupApEP3WHEC2Dm-DM
 
 [giuongxep.com]
 match = -57.1%%
