--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-08-09 04:35:27
+lastsearch = 2024-08-09 08:13:34
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOoqEjPXb67JBkKXE5ZjQXUedtI7X6plpSMEIx6vk8Y3qerkIg0gW
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.noithatpassion.com]
 match = -52.2%%
