--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-09 04:29:37
+lastsearch = 2024-08-09 07:59:22
 
 [suongtuyet.com]
-match = 16.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Cotton
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
+match = -36.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông ép 3 mảnh Korea Gấm
-url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
+match = 20.8%%
+title = Đệm Bông ép 2 mảnh Korea
+url = https://tuananh.vn/dem-bong-ep-2-manh-korea--p133.html
 
 [demxanh.com]
-match = -72.0%%
-title = Đệm bông ép Tuấn Anh chính hãng giá tốt nhất thị trường!
-url = https://demxanh.com/dem-bong-ep-tuan-anh.html
+match = -48.0%%
+title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
 match = 43.5%%
@@ -77,9 +77,9 @@ title = Đệm bông ép Tuấn Anh Korea công bông xanh nano kháng ...
 url = https://www.youtube.com/watch?v=GHsI7BMy734
 
 [m.facebook.com]
-match = -8.0%%
-title = HỘI NGƯỜI VIỆT NAM TẠI HÀN QUỐC -KOREA✈️
-url = https://m.facebook.com/groups/1588965941440570/posts/2246582662345558/
+match = 12.0%%
+title = Người Việt Cali | Tìm Thợ Nail
+url = https://m.facebook.com/groups/groupnguoivietcali/posts/tìm-thợ-nail-tiệm-nail-cách-bolsa-30-khách-mễ-dễ-chịu-tip-cao-chủ-trẻ-vui-vẻ-tho/8354018417963929/
 
 [www.facebook.com]
 match = -64.0%%
