CI images update

--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-09 05:15:14
+lastsearch = 2024-08-09 09:19:27
 
 [shopee.vn]
 match = 4.3%%
@@ -67,9 +67,9 @@ title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu-truc-cao-bang-778155
 
 [www.facebook.com]
-match = -52.2%%
-title = Chiếu trúc Cao Bằng, Chiếu trúc thanh, Chiếu trúc cây
-url = https://www.facebook.com/chieutrucvietso1/
+match = 21.7%%
+title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
+url = https://www.facebook.com/chieutruccaobangcbg/
 
 [www.youtube.com]
 match = -95.7%%
