--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-09 00:12:05
+lastsearch = 2024-08-09 09:20:07
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -168.8%%
-title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
-url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
+match = -143.8%%
+title = Hà Nội: dự án 'đắp chiếu' 16 năm làm khổ người dân
+url = https://baomoi.com/ha-noi-du-an-dap-chieu-16-nam-lam-kho-nguoi-dan-c49854035.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -258,8 +258,8 @@ url = https://baoquangnam.vn/cau-lac-bo-bong-ban-ai-lien-tam-ky-tu-duong-pho-den
 
 [thoibaotaichinhvietnam.vn]
 match = -193.8%%
-title = Phiên giao dịch chiều 6/8: Giá vàng giảm nhẹ, dầu và ...
-url = https://thoibaotaichinhvietnam.vn/phien-giao-dich-chieu-68-gia-vang-giam-nhe-dau-va-chung-khoan-phuc-hoi-156566.html
+title = Chứng khoán phái sinh: Các hợp đồng rung lắc quay đầu ...
+url = https://thoibaotaichinhvietnam.vn/chung-khoan-phai-sinh-cac-hop-dong-rung-lac-quay-dau-dieu-chinh-giam-diem-156777.html
 
 [nhandan.vn]
 match = -31.2%%
