--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-09 06:35:53
+lastsearch = 2024-08-09 09:12:00
 
 [demxanh.com]
 match = 37.0%%
@@ -37,8 +37,8 @@ title = Chiếu Tre Nekio cao cấp 160x200cm - Kyoryo
 url = https://kyoryo.vn/chieu-cao-cap/chieu-tre-nekio-cao-cap-160x200.html
 
 [thegioidemviet.vn]
-match = 3.7%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
+match = 14.8%%
+title = BẢNG GIÁ Chiếu Trúc Việt Nam mới ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
