--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-09 06:22:21
+lastsearch = 2024-08-09 09:22:35
 
 [changagoidemsonghong.com]
 match = 18.5%%
@@ -72,9 +72,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [shopee.vn]
-match = -22.2%%
-title = Bộ Chăn Ga Gối Cotton Sateen Mịn Decor Bo Chun 10cm ...
-url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Sateen-Mịn-Decor-Bo-Chun-10cm-Đến-30cm-Bộ-Lụa-Thái-Size-1m6-1m8-Kèm-Chăn-Chần-(Video-ảnh-thật)-i.214153944.18282347783
+match = -33.3%%
+title = Bộ Chăn phao Ga Gối Cotton 3F Cao Cấp SIêu Nhiều Mẫu ...
+url = https://shopee.vn/Bộ-Chăn-phao-Ga-Gối-Cotton-3F-Cao-Cấp-SIêu-Nhiều-Mẫu-Mềm-Mịn-(-gồm-1-ga-2-vỏ-gối-1-chăn-chần-dày-đã-có-ruột)-i.34279518.17159617262
 
 [lynconcept.com]
 match = -25.9%%
