--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-09 08:00:02
+lastsearch = 2024-08-09 09:06:42
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -17,9 +17,9 @@ title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
-match = -6.5%%
-title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
+match = 3.2%%
+title = Đệm bông ép Dreamland bông Nano chống khuẩn
+url = https://demxanh.com/dem-bong-ep-dreamland-bong-nano-chong-khuan.html
 
 [dreamland.vn]
 match = -21.1%%
@@ -39,7 +39,7 @@ url = https://dongahome.vn/dem-lo-xo-cao-cap-hanvico-hera
 [vuanem.com]
 match = -35.5%%
 title = Để chuyện phòng the lên đỉnh, bạn nên chọn loại nệm nào?
-url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html?srsltid=AfmBOoqZjam3in3bSTMWWFO-7mxR5QSj9bFXqvA82C0FBxqkHVDaFAzi
+url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html
 
 [uannga.vn]
 match = -19.4%%
@@ -73,8 +73,8 @@ url = http://weeklyrentals.com/dorunit.cgi?url=xn----8sbbfekaevffmq4adcddba4axac
 
 [www.instagram.com]
 match = -41.2%%
-title = November 13, 2021
-url = https://www.instagram.com/giagon_decor/p/CWPYKYqpFOG/
+title = November 14, 2021
+url = https://www.instagram.com/giagon_decor/p/CWQMHChpqt_/
 
 [www.youtube.com]
 match = -144.4%%
