--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-09 06:30:31
+lastsearch = 2024-08-09 09:14:54
 
 [www.tiktok.com]
 match = -235.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2iloPyt25F&sig=ACfU3U0Dl8r4eM-ZKrf_381FTrZDaiKxMQ&hl=en&sa=X&ved=2ahUKEwiUz5Wug-aHAxWMEmIAHQBDFg8Q6AF6BAgeEAM
+match = -229.4%%
+title = Lexicon Palaeslovenico-Græco-Latinum emendatum auctum edidit ...
+url = https://books.google.com/books?id=QBJhAAAAcAAJ&pg=PA10&lpg=PA10&dq=man+in+hoa+dep+16&source=bl&ots=rtyW0GijUj&sig=ACfU3U1rrGnxpGjJNtTjK2lFNW18rj1J3A&hl=en&sa=X&ved=2ahUKEwjvi72s6-aHAxUJGzQIHcekHnIQ6AF6BAg0EAM
 
 [tax.vermont.gov]
 match = -29.4%%
