--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-08-09 08:01:46
+lastsearch = 2024-08-09 09:09:35
 
 [shopee.vn]
-match = -52.4%%
-title = thảm trải giường giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường
+match = -57.1%%
+title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
+url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
 
 [khosibaclieu.com]
 match = -9.5%%
@@ -32,8 +32,8 @@ title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
 url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [everonvn.com.vn]
-match = -119.0%%
-title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
+match = -66.7%%
+title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [comehome.com.vn]
@@ -52,9 +52,9 @@ title = Thảm Trải Giường Cao Cấp Loại 1.6m
 url = https://www.lazada.vn/products/tham-trai-giuong-cao-cap-loai-16m-i245665123.html?srsltid=AfmBOoqNPu3XvKBDhQ_lHOeDmJUm-JlLxNObWieNcTrWXJe3-hGcrxIC
 
 [www.facebook.com]
-match = 33.3%%
-title = Thảm Trải Giường | Hanoi
-url = https://www.facebook.com/ShopThamTraiGiuong/
+match = -85.7%%
+title = NÉT RIÊNG CUỐN HÚT TỪ GIƯỜNG MAXINE Nằm trong bộ ...
+url = https://www.facebook.com/nhaxinhvn/videos/nét-riêng-cuốn-hút-từ-giường-maxinenằm-trong-bộ-sưu-tập-cùng-tên-chiếc-giường-gỗ/728754454752154/
 
 [sagatexvietnam.com.vn]
 match = -81.0%%
@@ -74,7 +74,7 @@ url = https://nhilong.com/bi-quyet-chon-tham-phong-ngu-dep/
 [noithatcaco.vn]
 match = -95.2%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOorY7crEz_NcuJrOlUDSNnEaR4YAdrg3OvINv-I60bpdzsMBf8rV
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [vietmat.vn]
 match = -14.3%%
@@ -193,7 +193,7 @@ url = https://khogiuongsat.com/giuong-sat-2-tang-gia-dinh-gts-15/
 
 [jysk.vn]
 match = -109.5%%
-title = Giường | HASLEV | gỗ công nghiệp/vải polyester - JYSK.vn
+title = Giường | HASLEV | gỗ công nghiệp/vải polyester | xám đậm
 url = https://jysk.vn/giuong-haslev-go-cong-nghiepvai-polyester-xam-dam-r160xd200cm
 
 [noithathoaphat360.com]
