CI images update

--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-09 04:48:18
+lastsearch = 2024-08-09 10:17:15
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC HẠT VÀNG HƯƠNG TRÚC 1.4M X 2M
 url = https://chieutrucsaigon.com/chieu-truc-hat-vang-huong-truc-1m4x2m.html
 
 [chieutrelanlan.com]
-match = -71.4%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
+match = -76.2%%
+title = Chiếu trúc mắt nhỏ không viền màu trắng 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-160x190cm-14.html
 
 [nemsaithanh.com]
 match = 57.9%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
-match = -47.6%%
-title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-80cm/
+match = -133.3%%
+title = Chiếu trúc chiếu tre loại tốt giá rẻ tại TPHCM - Miễn phí giao ...
+url = https://vongxepsaigon.vn/chieu-truc/
 
 [thegioichieutruc.com]
 match = -47.6%%
