--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-09 06:20:35
+lastsearch = 2024-08-09 10:16:07
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -42,9 +42,9 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = -141.2%%
-title = ATEEZ(KQ Fellaz) (Yunho Solo) Performance Video
-url = https://www.youtube.com/watch?v=SOqaA-Mbw88
+match = -76.5%%
+title = Eltee Skhillz - Odg (Official Video)
+url = https://www.youtube.com/watch?v=DfOdZ3CTXko
 
 [www.tiktok.com]
 match = 37.5%%
