--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-09 06:01:08
+lastsearch = 2024-08-09 10:25:14
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -77,9 +77,9 @@ title = nhà cung cấp dây đồ da
 url = https://trangvangvietnam.com/tagclass/20141160/nha-cung-cap-day-do-da.html
 
 [www.youtube.com]
-match = -53.6%%
-title = Cây Dâu trái dài Đài Loan trồng chơi cũng đủ trái ăn | Nhà ...
-url = https://www.youtube.com/watch?v=Vz6KrfVTWWQ
+match = -35.7%%
+title = DIỆU HUY | #0939081082 | HỒNG QUÂN ĐÀI LOAN, CẨM ...
+url = https://www.youtube.com/watch?v=abrnGfoe93M
 
 [divui.com]
 match = -60.7%%
@@ -107,8 +107,8 @@ title = SÁCH HƯỚNG DẪN HỌC VIÊN
 url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual - 6 ed..pdf
 
 [drhc-cosmetics.com]
-match = -60.7%%
-title = DR.HC All-Natural Skincare Face Soap - Goat Milk Orange ...
+match = -71.4%%
+title = Goat Milk Orange (110g, 3.8oz.) (Skin brightening, Anti- ...
 url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
 
 [quangduc.com]
@@ -177,9 +177,9 @@ title = TP. Đào Viên · XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN - Coda
 url = https://coda.io/@xuatkhaulaodong/xkld-dai-loan/tp-ao-vien-13
 
 [abina.vn]
-match = -57.1%%
-title = Bột làm 1kg sữa chua Hy Lạp vị mật ong manuka Easiyo - Abina
-url = https://abina.vn/sua-chua-hy-lap-mat-ong-manuka-easiyo-manuka-honey/
+match = -75.0%%
+title = Viên uống Xtend-Life NR6: tăng sinh NAD tự nhiên, chống lão ...
+url = https://abina.vn/xtend-life-nr6-tang-sinh-nad-tu-nhien-tang-cuong-tuoi-tho/
 
 [kinhtexaydung.gov.vn]
 match = -21.4%%
@@ -285,4 +285,14 @@ url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cu
 match = -39.3%%
 title = Đảo Đài Loan hệ số phay trên máy quay 63 Trục quay
 url = https://vi.made-in-china.com/co_kexindg/product_Taiwan-Taliang-Routing-Milling-Machine-Sc63-Spindle-Collet_ruooenong.html
+
+[tapchiyhocvietnam.vn]
+match = -3.6%%
+title = Danh s¸ch ký nhËn lµm thªm ngoµi giê
+url = https://tapchiyhocvietnam.vn/index.php/vmj/article/download/9971/8807/17742
+
+[danangport.com]
+match = 12.0%%
+title = truyền thống cảng đà nẵng
+url = https://danangport.com/wp-content/uploads/2018/08/TruyenThongCang.pdf
 
