--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-09 08:10:08
+lastsearch = 2024-08-09 10:20:38
 
 [demxanh.com]
-match = 34.5%%
-title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+match = 3.4%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOopTpScyiEgU9f0A20VV7tUr3WwosV3ibkgw2ZZcm5HyR3a16P2D
 
 [entershopping.vn]
 match = -13.8%%
@@ -49,7 +49,7 @@ url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 [thegioidemonline.com]
 match = 37.9%%
 title = Chiếu điều hòa cao su non Tencel màu Ghi
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html?srsltid=AfmBOorjOY3db1w0bsmzQEiBuFjSG9_LRoSdElbeOtGt5MhbCp-63uLP
 
 [shopee.vn]
 match = -27.6%%
