--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-09 07:59:01
+lastsearch = 2024-08-09 10:26:13
 
 [demxanh.com]
 match = 42.4%%
@@ -27,8 +27,8 @@ title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
 url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
 
 [thegioidemviet.vn]
-match = 15.2%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
+match = 18.2%%
+title = BẢNG GIÁ Chiếu Trúc Việt Nam mới ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.youtube.com]
