--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-09 07:58:00
+lastsearch = 2024-08-09 10:17:54
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -57,8 +57,8 @@ title =
 url = https://www.prepscholar.com/sat/s/colleges/UC-Irvine-admission-requirements
 
 [www.usmcu.edu]
-match = -333.3%%
-title = U.S. Marines in Vietnam Fighting the North Vietnamese ...
+match = -66.7%%
+title = us . marines in vietnam
 url = https://www.usmcu.edu/Portals/218/U_S_ Marines in Vietnam Fighting the North Vietnamese 1967  PCN 19000309000.pdf
 
 [tophat.com]
@@ -287,9 +287,9 @@ title = Florida State University
 url = https://www.fsu.edu/
 
 [www.yelp.com]
-match = -133.3%%
-title = Pho Ga An Nam - Restaurant Reviews
-url = https://www.yelp.com/biz/pho-ga-an-nam-san-jose
+match = -100.0%%
+title = Con Ga Trong Restaurant Photos
+url = https://www.yelp.com/biz/con-ga-trong-restaurant-san-jose-2
 
 [www.fwe.com]
 match = -58.3%%
@@ -395,4 +395,9 @@ url = https://gastateusbc.com/forms/
 match = -133.3%%
 title = APPENDIX F – SEVIS LOOKUP TABLES
 url = https://www.ice.gov/doclib/sevis/pdf/batch_api_6.55_10162020_appf.pdf
+
+[www2.ed.gov]
+match = -266.7%%
+title = Candidates for the US Presidential Scholars Program
+url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
 
