--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-09 06:55:42
+lastsearch = 2024-08-09 10:23:46
 
 [www.youtube.com]
 match = -420.0%%
@@ -97,9 +97,9 @@ title =
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8733268/
 
 [www.tiktok.com]
-match = -500.0%%
-title = Tallest teenager living (male): 7 ft 3.02 in (221.03 cm) 14-year ...
-url = https://www.tiktok.com/@guinnessworldrecords/video/6896585098825698562?lang=en
+match = -70.0%%
+title = Ren 14 Days with You
+url = https://www.tiktok.com/discover/ren-14-days-with-you
 
 [nordicanglers.com]
 match = -120.0%%
@@ -122,9 +122,9 @@ title =
 url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
-match = 0.0%%
-title = 
-url = https://cutiesai.itch.io/14dayswithyou/purchase
+match = -240.0%%
+title = 14 Days With You by cutiesai - Itch.io
+url = https://cutiesai.itch.io/14dayswithyou
 
 [www.koha.net]
 match = 0.0%%
