--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-09 05:22:15
+lastsearch = 2024-08-09 10:25:54
 
 [en.wikipedia.org]
-match = -31.2%%
-title = Gwangju Uprising
-url = https://en.wikipedia.org/wiki/Gwangju_Uprising
+match = 8.7%%
+title = Korea under Japanese rule
+url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
 
 [www.britannica.com]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-88eZiahc&sig=ACfU3U1OKKy7su1PXp6GrPJTYIpXi8G8Qw&hl=en&sa=X&ved=2ahUKEwjvs9WGqs2HAxUJrYkEHSL2C14Q6AF6BAgqEAM
 
 [30rates.com]
-match = -91.3%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+match = -65.2%%
+title = BITCOIN PRICE PREDICTION TOMORROW, WEEK AND ...
+url = https://30rates.com/btc-to-usd-forecast-today-dollar-to-bitcoin
 
 [www.ncbi.nlm.nih.gov]
 match = -95.7%%
@@ -112,9 +112,9 @@ title =
 url = https://www.koreanclass101.com/korean-age/
 
 [www.tiktok.com]
-match = -39.1%%
-title = Wont Let Me Talk Basic Training Valorant
-url = https://www.tiktok.com/discover/wont-let-me-talk-basic-training-valorant
+match = -34.8%%
+title = Guy Falls Through Soft Play Full Video
+url = https://www.tiktok.com/discover/guy-falls-through-soft-play-full-video
 
 [www.unikorea.go.kr]
 match = -113.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=0620012a1b0b1131&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwi6z_Krt-aHAxUQEVkFHSAMGtIQsZYEegQISxAC
+url = https://www.google.com/search?sca_esv=96438eb14cdfc6c9&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwisyNGb--aHAxVvDHkGHS6YD7AQsZYEegQIIhAC
 
 [produccionesitaca.es]
 match = -21.4%%
@@ -470,4 +470,9 @@ url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-snea
 match = -425.0%%
 title = KDCA
 url = https://www.kdca.go.kr/index.es?sid=a3
+
+[kr.usembassy.gov]
+match = -73.9%%
+title = U.S. Embassy & Consulate in the Republic of Korea
+url = https://kr.usembassy.gov/services-doctors/
 
