--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-08-09 09:10:55
+lastsearch = 2024-08-09 10:27:56
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -29,12 +29,12 @@ url = https://everonhn.com.vn/tam-trai-tien-ich-everon
 [everonvn.com.vn]
 match = 18.2%%
 title = Bảng giá bán Tấm topper Everon AVIV
-url = https://everonvn.com.vn/everon/2215/topper-everon-aviv
+url = https://everonvn.com.vn/everon/2215/topper-everon-aviv?srsltid=AfmBOopQzacrum4Gx-Ob-6crRDORpslRem_6DGscim0zrybbcmaocWL3
 
 [everon.com]
-match = -113.6%%
-title = Bảng giá của 5 loại topper trải sàn đa năng, cao cấp nhất ...
-url = https://everon.com/tin-san-pham/topper-trai-san-n256.html
+match = 47.1%%
+title = Tấm trải - Topper
+url = https://everon.com/danh-muc-san-pham/tam-trai-topper
 
 [everonthaiha.com]
 match = 47.1%%
@@ -49,7 +49,7 @@ url = https://everonminhkhai.com/product-category/dem/tam-trai-topper/
 [www.lazada.vn]
 match = -77.3%%
 title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tam-trai-everon/
+url = https://www.lazada.vn/tag/tam-trai-everon/?srsltid=AfmBOoqYv8Mhcy9Vi4GPdpVCOPI3jcvF-ucpe485TXt8aLqoh-rHVUns
 
 [kbedding.vn]
 match = 50.0%%
@@ -57,9 +57,9 @@ title = Tấm trải / Topper - K-Bedding
 url = https://kbedding.vn/danh-muc/nem/tam-trải-topper/
 
 [dailyeveron.vn]
-match = 59.1%%
-title = Tấm Trải Mát Cool Pad EVERON
-url = https://dailyeveron.vn/phu-kien-dem/tam-trai-mat-cool-pad-everon.html
+match = -45.5%%
+title = Tấm Trải Văn Phòng EVERON, tấm trải tiện ích Everon
+url = https://dailyeveron.vn/phu-kien-dem/tam-trai-van-phong-everon.html
 
 [everon.online]
 match = 36.4%%
