--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-09 07:58:40
+lastsearch = 2024-08-09 10:23:25
 
 [noithathomy.com]
 match = -42.9%%
@@ -22,9 +22,9 @@ title = Thảm bali 2m x 3m cao cấp
 url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
 
 [tiki.vn]
-match = -9.5%%
-title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
-url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
+match = -85.7%%
+title = Mua Thảm trải sàn Bali giá rẻ chất lượng 2m*3m. m6*2m3
+url = https://tiki.vn/tham-trai-san-bali-gia-re-chat-luong-2m-3m-m6-2m3-p143202560.html
 
 [muachunghaiphong.com]
 match = 0.0%%
