--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-09 09:53:57
+lastsearch = 2024-08-09 10:28:36
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -72,8 +72,8 @@ title = TUI Cruises 10 April 2024
 url = https://www.cruisetimetables.com/tuicruises-10apr2024.html
 
 [www.lightology.com]
-match = -200.0%%
-title = Tui Pendant by David Trubridge - Lightology
+match = -316.7%%
+title = Tui Pendant by David Trubridge | TUI-SMAL-BMB-WHI-KIT- ...
 url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441
 
 [vitalimpacts.org]
@@ -452,9 +452,9 @@ title = TUI
 url = https://gy.linkedin.com/company/tuigroup?trk=products_details_guest_organization_name
 
 [www.prnewswire.com]
-match = -308.3%%
-title = TUI Hotels & Resorts Taps Canary Technologies to Power ...
-url = https://www.prnewswire.com/news-releases/tui-hotels--resorts-taps-canary-technologies-to-power-its-digital-guest-journey-302204723.html
+match = -300.0%%
+title = Royal Caribbean Group announces entry into exchange ...
+url = https://www.prnewswire.com/news-releases/royal-caribbean-group-announces-entry-into-exchange-agreements-with-certain-holders-of-its-outstanding-6-000-convertible-senior-notes-due-2025--302215402.html
 
 [www.asdnews.com]
 match = -308.3%%
@@ -515,4 +515,9 @@ url = https://origin.savvytime.com/converter/south-korea-gangdong-to-spain-tui
 match = -216.7%%
 title = Resort Tui Magic Life Bodrum - Adults Only (16+)
 url = https://www.allbodrumhotels.org/en/property/ersan-resort-spa.html
+
+[www.federalregister.gov]
+match = -316.7%%
+title = Endangered Species Status for the Long Valley Speckled ...
+url = https://www.federalregister.gov/documents/2024/08/08/2024-17249/endangered-and-threatened-wildlife-and-plants-endangered-species-status-for-the-long-valley-speckled
 
