--- a/images/tui-warmdream-180x200x09/config.ini
+++ b/images/tui-warmdream-180x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 lastopen = 2024-06-17 10:35:51
 
 [search]
-lastsearch = 2024-08-09 08:05:37
+lastsearch = 2024-08-09 10:26:56
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOoq2piD-g15OzSfT9d3vOd9OIw6vus5bUuXc71AYm7d17Ft8l6FJ
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.cloudynights.com]
 match = -75.0%%
