CI images update

--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-09 08:03:53
+lastsearch = 2024-08-09 10:40:49
 
 [shopee.vn]
 match = 25.0%%
-title = Chiếu lác màu xuất khấu
-url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
+title = Chiếu Lác Trắng Xếp Gọn
+url = https://shopee.vn/Chiếu-Lác-Trắng-Xếp-Gọn-i.58697470.8505363108
 
 [chieulongdinh.com.vn]
 match = -162.5%%
@@ -152,9 +152,9 @@ title = Đấu giá 12 xe ô tô Hyundai, Samco, giá khởi điểm thấp ...
 url = https://www.vietnam.vn/dau-gia-12-xe-o-to-hyundai-samco-gia-khoi-diem-thap-nhat-650-trieu-dong/
 
 [moveek.com]
-match = -175.0%%
-title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/cinestar-kien-giang/
+match = -162.5%%
+title = Rạp CGV Aeon Bình Tân - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/cgv-aeon-mall-binh-tan/
 
 [baotangphunu.com]
 match = -137.5%%
@@ -405,4 +405,9 @@ url = https://medlatec.vn/tin-tuc/noi-mac-tu-cung-day-bao-nhieu-la-de-thu-thai-n
 match = -187.5%%
 title = Động đất 7,1 độ richter, xuất hiện sóng thần ở Nhật Bản
 url = https://baoangiang.com.vn/dong-dat-7-1-do-richter-xuat-hien-song-than-o-nhat-ban-a402350.html
+
+[viettelpost.com.vn]
+match = 12.5%%
+title = Tìm kiếm bưu cục
+url = https://viettelpost.com.vn/tim-kiem-buu-cuc/
 
