--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-09 09:14:33
+lastsearch = 2024-08-09 10:39:06
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -12,9 +12,9 @@ title = Cửa hàng chiếu nhựa, mành, rèm, thảm uy tin tại Hà Nội
 url = https://www.maihuyencorp.com/shop
 
 [shopee.vn]
-match = 15.0%%
-title = Chiếu Nhựa Mai Huyền ❤️FREESHIP ...
-url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-❤️FREESHIP❤️-Chiếu-Nhựa-Hà-Nội-(1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m)-i.126028938.4749254076
+match = 70.0%%
+title = Chiếu nhựa Hà Nội các cỡ
+url = https://shopee.vn/Chiếu-nhựa-Hà-Nội-các-cỡ-i.236527859.6960486970
 
 [tchome.vn]
 match = 20.0%%
@@ -44,17 +44,17 @@ url = https://www.sendo.vn/chieu-nhua.htm
 [www.facebook.com]
 match = 63.2%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOopRQuK1uykBP-hmsKKXs8KvP4LZBwM9UEVsFmt0j2i1N38Uzc7G
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOoqSWFKCYU-_TBgExl3LgFY4XhSCcE4Z3OLKFVg_y8P4XkrB16Vc
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOormdVN2JMe_7ZFN_oCGASEJQyr1HCuHtTs5Vxt4ATQI986U11Z3
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOopS-BEaSgKz5WDFq8TaGq_n8UoEdCISnr6Zecj0O6ucvSXPnpnb
 
 [thuanloitrading.com]
 match = 10.0%%
