--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-08-09 08:06:38
+lastsearch = 2024-08-09 10:48:18
 
 [demxanh.com]
-match = -84.2%%
-title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOoqfO-qV5gsomvuOIwZ2FDNpFJ5Qb5JSDpnmdSjJnMlpbtPUwibo
+match = -26.3%%
+title = Cung cấp mẫu tấm trang trí khách sạn TT04
+url = https://demxanh.com/tam-trang-tri-khach-san-tt04.html
 
 [thegioidemviet.vn]
 match = -73.7%%
