--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-09 09:07:04
+lastsearch = 2024-08-09 10:34:57
 
 [shopee.vn]
-match = -114.3%%
-title = Thảm lông trải sàn lót sàn phòng khách trải giường phòng ...
-url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-giường-phòng-ngủ-thảm-lông-trắng-loang-mịn-chụp-ảnh-hình-tròn-vuông-1m6x2m-i.472596491.3194973741
+match = -76.2%%
+title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 
 [www.lazada.vn]
 match = -85.7%%
 title = Thảm Lông Cừu Thảm Trải Giường Trải SànTtrần Bông 3 ...
-url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html?srsltid=AfmBOop5vRpsfFOa5M8O51FioMl798isuhAPuVzD-eh0dcsBVnNaMQh9
+url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html?srsltid=AfmBOopaqeZEeyz456vTSwijOXMBHPT-mE95UgP_jkVhkj7QGI80hZ8E
 
 [tiki.vn]
 match = -38.1%%
@@ -69,7 +69,7 @@ url = https://congtynemthangloi.com/kich-thuoc-giuong-ngu-chuan-pho-bien-hien-na
 [ninhouse.vn]
 match = -76.2%%
 title = Cách tính kích thước ga giường để phù hợp với nệm
-url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOorGGNwkL52q-RghFrTIySZsYU-MygZ-AMq2c2y4vm2CiYh1VmDt
+url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOooqO3rhRhonO7sDAL37FqlA9p6cHrfqnL8-2ODInWWZZSPLch4t
 
 [giuongxep.com]
 match = -57.1%%
@@ -129,7 +129,7 @@ url = https://danacity.com/chon-tham-trai-san-giuong-ngu-theo-phong-thuy-cho-tun
 [noithatcaco.vn]
 match = -95.2%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOoqrkw0YxR5uucZj3I0naBkfjVRpkAB4d4EtdoB5kJ-sAQ9_ht6D
+url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOooArjnGmf_AStEuKJOV5JJm_yU0Una9-jgFbUQf4LbH8wy0--5X
 
 [danacity.com.vn]
 match = -42.9%%
