--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,27 +4,27 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-09 07:59:22
+lastsearch = 2024-08-09 10:43:54
 
 [suongtuyet.com]
-match = -36.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
+match = 16.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Cotton
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 
 [tuananh.vn]
-match = 20.8%%
-title = Đệm Bông ép 2 mảnh Korea
-url = https://tuananh.vn/dem-bong-ep-2-manh-korea--p133.html
+match = 12.0%%
+title = Đệm bông ép 3 mảnh Korea Gấm
+url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
 
 [demxanh.com]
-match = -48.0%%
-title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+match = -72.0%%
+title = Đệm bông ép Tuấn Anh chính hãng giá tốt nhất thị trường!
+url = https://demxanh.com/dem-bong-ep-tuan-anh.html?srsltid=AfmBOopggSMKPLDLArCC4nMl_PC_J8i3sYBA7vDFU0hvgzYJ9UeiyI3A
 
 [shopee.vn]
-match = 43.5%%
-title = Đệm korea plus TUẤN ANH
-url = https://shopee.vn/Đệm-korea-plus-TUẤN-ANH-i.138900891.5301651649
+match = -40.0%%
+title = nệm tuấn anh giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=nệm tuấn anh
 
 [demkhangduy.com]
 match = 25.0%%
