CI images update

--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-09 10:48:16
+lastsearch = 2024-08-09 11:22:21
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = 10.7%%
-title = Chiếu nhựa Việt Nam 2m-4m RẺ NHẤT - cn2m4m
-url = https://www.sendo.vn/chieu-nhua-vie-t-nam-2m-4m-re-nha-t-41738897.html/
+match = -7.1%%
+title = Chiếu Nhựa Văn Phòng Bền Đẹp, Rẻ Như Tặng, Chất ...
+url = https://www.sendo.vn/chieu-nhua-van-phong.htm
 
 [mia.vn]
 match = -7.1%%
@@ -365,4 +365,14 @@ url = https://books.google.com/books?id=SrRQAQAAIAAJ&pg=PA36&lpg=PA36&dq=chieu+n
 match = -57.1%%
 title = Tiết kiệm cả trăm triệu đồng mỗi năm nhờ tránh xa đồ nhựa
 url = https://tienphong.vn/tiet-kiem-ca-tram-trieu-dong-moi-nam-nho-tranh-xa-do-nhua-post1662028.tpo
+
+[baodienbienphu.com.vn]
+match = -60.7%%
+title = 6 nhiệm vụ trọng tâm để giảm thiểu rác thải nhựa trong du ...
+url = https://baodienbienphu.com.vn/tin-tuc/du-lich/217279/6-nhiem-vu-trong-tam-de-giam-thieu-rac-thai-nhua-trong-du-lich
+
+[tuoitre.vn]
+match = -35.7%%
+title = Du lịch Hà Nội thu hơn 9.000 tỉ trong tháng 5-2024
+url = https://tuoitre.vn/du-lich-ha-noi-thu-hon-9000-ti-trong-thang-5-2024-2024052816225679.htm
 
