--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-09 06:26:58
+lastsearch = 2024-08-09 11:17:28
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -52,9 +52,9 @@ title = Điện thoại Xiaomi Redmi K70 (Snapdragon 8 Gen 2)
 url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k70-cau-hinh-manh.html
 
 [www.youtube.com]
-match = -242.9%%
-title = [Phim Việt Nam] TRÁI TIM MÀU XANH | Tập 16 | Phim Tâm Lý ...
-url = https://www.youtube.com/watch?v=3ybqAT8S9Pw
+match = -121.4%%
+title = André Rieu - The Beautiful Blue Danube
+url = https://www.youtube.com/watch?v=IDaJ7rFg66A
 
 [www.gadgets360.com]
 match = 0.0%%
@@ -132,9 +132,9 @@ title = Buy Blue Man Group Las Vegas Tickets
 url = https://www.blueman.com/las-vegas/buy-tickets
 
 [www.facebook.com]
-match = -207.1%%
-title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và ...
-url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
+match = -85.7%%
+title = Chow Down In Chinatown - Houston
+url = https://www.facebook.com/groups/chowdownhouston/
 
 [mail.google.com]
 match = -14.3%%
