--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,27 +4,27 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-09 10:58:54
+lastsearch = 2024-08-09 11:16:24
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOoo2z7Wk8c6QWUAusKpqlgf225OY_dyl4PzfsWdhJHHrYIdjrG1E
 
 [www.everonqb.com]
-match = -38.1%%
-title = Everon Quảng Bình Bộ ga phủ EPCARLESS 160x200
-url = https://www.everonqb.com/bo-ga-phu-epcarless-160x200.html
+match = -9.5%%
+title = Everon Quảng Bình Ga phủ EPM19043 180x200
+url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
 
 [www.diepxuan.com]
 match = -19.0%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOoorzkv-5_QFZ2z8lk_-ZjxShSQo4g6Vp7Fg3as0rre2_pIXUfC5
 
 [muathongminh.vn]
-match = -66.7%%
-title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
-url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
+match = -142.9%%
+title = Trọn bộ chăn ga gối satin poly 7 món ga phủ trần bông ...
+url = https://muathongminh.vn/tron-bo-chan-ga-goi-satin-poly-7-mon-ga-phu-tran-bong-koseul-san-hang-p.1__7418213403__16397825
 
 [beecost.vn]
 match = -176.2%%
