--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-09 10:29:38
+lastsearch = 2024-08-09 11:19:54
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = Evolving "nofollow" – new ways to identify the nature of links
 url = https://developers.google.com/search/blog/2019/09/evolving-nofollow-new-ways-to-identify
 
 [www.tiktok.com]
-match = -133.3%%
-title = Authentic Vietnamese restaurant in PJ with 16-hour cooked ...
-url = https://www.tiktok.com/@kl.foodie/video/7356932501274676498
+match = -95.2%%
+title = 📍Anh Hong 3123 Clement St, San Francisco, CA 94121 ...
+url = https://www.tiktok.com/@chumperjreats/video/7255727544723508526
 
 [www.inquirer.com]
 match = 9.5%%
