CI images update

--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-09 11:16:03
+lastsearch = 2024-08-09 12:01:12
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -164.7%%
-title = Hoa took my trailer!! #hoa #neighbor #karen #karenmovie
-url = https://www.tiktok.com/@hoa.guy/video/7374755848872103214
+match = -35.3%%
+title = Hoa Person for The 4th of July
+url = https://www.tiktok.com/discover/hoa-person-for-the-4th-of-july
 
 [www.steadily.com]
 match = 0.0%%
@@ -127,9 +127,9 @@ title = Title 4 Homeowner's Association Handbook
 url = https://www.azliquor.gov/assets/documents/HOA_handbook_2_10_12.pdf
 
 [www.facebook.com]
-match = -158.8%%
-title = QOD 090216 | One man's HOA says his "Back the Blue ...
-url = https://www.facebook.com/CBSAustin/videos/qod-090216/10150679832699996/
+match = 18.8%%
+title = The King Channel
+url = https://www.facebook.com/nguyvukingchannel/
 
 [msclawyers.com]
 match = 0.0%%
