--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-09 10:17:34
+lastsearch = 2024-08-09 11:54:40
 
 [everonvn.com.vn]
 match = 15.8%%
@@ -12,9 +12,9 @@ title = Bộ Everon Epm-19064
 url = https://everonvn.com.vn/everon/754/bo-everon-epm19064
 
 [everon.com.vn]
-match = 33.3%%
-title = Bộ Chăn Ga Everon ESC 22020
-url = https://everon.com.vn/bo-chan-ga-everon-esc-22020/
+match = 5.3%%
+title = BỘ EVERON EPC 19043
+url = https://everon.com.vn/epc-19043/
 
 [demxanh.com]
 match = 18.5%%
