--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-09 10:44:04
+lastsearch = 2024-08-09 11:48:40
 
 [chanrathanhthuy.com]
 match = -9.7%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối SH_UT23 028
 url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-032
 
 [changagoidemsonghong.com]
-match = -29.0%%
-title = Chăn ga gối Sông Hồng dòng Home mã S17-05 - Chất Tencel ...
-url = https://changagoidemsonghong.com/chan-ga-goi-home-s17-05
+match = 9.7%%
+title = Bộ chăn ga gối trẻ em mã TE19-09 khuyến mại -30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-te19-09
 
 [foreverbedding.net]
 match = -3.2%%
