--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-09 11:00:21
+lastsearch = 2024-08-09 11:47:58
 
 [vnexpress.net]
 match = -128.6%%
@@ -27,9 +27,9 @@ title = Tất tần tật kinh nghiệm về tour du lịch Vũng Tàu 2022
 url = https://liontrip.vn/tat-tan-tat-kinh-nghiem-ve-tour-du-lich-vung-tau/
 
 [haivan.com]
-match = -85.7%%
-title = Kinh nghiệm du lịch Vũng Tàu cho gia đình - 2 ngày 1 đêm
-url = https://haivan.com/diem-den/Vung-tau/kinh-nghiem-du-lich-vung-tau-cho-gia-dinh-2-ngay-1-dem
+match = -66.7%%
+title = Kinh nghiệm du lịch Vũng Tàu 3 ngày 2 đêm từ A đến Z
+url = https://haivan.com/diem-den/Vung-tau/kinh-nghiem-du-lich-vung-tau-3-ngay-2-dem-tu-a-den-z
 
 [lockernlock.vn]
 match = -71.4%%
@@ -294,7 +294,7 @@ url = https://saigonthanhcong.com/cung-kham-pha-ve-dep-cua-bien-voi-tour-vung-ta
 [hita.com.vn]
 match = -114.3%%
 title = 10+ địa điểm check in Vũng Tàu đẹp say mê khiến bạn ...
-url = https://hita.com.vn/10-dia-diem-check-in-vung-tau-dep-say-me-khien-ban-quen-loi-ve-post-2861.html
+url = https://hita.com.vn/10-dia-diem-check-in-vung-tau-dep-say-me-khien-ban-quen-loi-ve-post-2861.html?srsltid=AfmBOor2xk7Hm6DfVsy5DFy9_xL_dvTWLUWK8IdwVM4KhQjCB9CuKwUV
 
 [bariavungtautourism.com.vn]
 match = -123.8%%
