--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-09 03:30:47
+lastsearch = 2024-08-09 11:51:28
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -27,9 +27,9 @@ title = CHIẾU TRÚC QUẾ LÂM MẮT NGỌC KHÔNG HOA VĂN ...
 url = https://shopee.vn/CHIẾU-TRÚC-QUẾ-LÂM-MẮT-NGỌC-KHÔNG-HOA-VĂN-HÀNG-LOẠI-1-BÓNG-ĐẸP-i.444652147.14296554126
 
 [demxanh.com]
-match = -25.0%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -7.1%%
+title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
+url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html?srsltid=AfmBOopBWLzeowJBTjD4ewssOf0RHFn7X9RYB9jToB2zOcWNFYXE375h
 
 [tiki.vn]
 match = -39.3%%
