--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-08-09 08:00:24
+lastsearch = 2024-08-09 11:56:43
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -17,9 +17,9 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [demxanh.com]
-match = -28.6%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -10.7%%
+title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
+url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
 match = -3.6%%
@@ -42,8 +42,8 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [tiki.vn]
-match = -42.9%%
-title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
+match = -39.3%%
+title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 8, 2024
 url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [www.sendo.vn]
@@ -97,8 +97,8 @@ title = Trinh Hoi and the new wifey don't look half bad together
 url = https://vietchannel.wordpress.com/2010/03/06/trinh-hoi-and-the-new-wifey-dont-look-half-bad-together/
 
 [sieuthinguyenkim.com]
-match = -10.7%%
-title = Chiếu Quế lâm - Siêu Thị Điện Máy Nguyễn Kim
+match = -35.7%%
+title = Chiếu Quế lâm - Chiếu | Siêu thị điện máy Nguyễn Kim
 url = https://sieuthinguyenkim.com/chieu-que-lam-nsh4041837720.html
 
 [h5.lazada.vn]
