--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-09 08:09:25
+lastsearch = 2024-08-09 11:59:10
 
 [www.bible.com]
 match = -135.7%%
@@ -22,14 +22,14 @@ title = Màn chụp tự bung 2016 - F2 - xanh viền xanh
 url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 
 [munghoangphat.com]
-match = -135.7%%
-title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
+match = -178.6%%
+title = Mùng chụp tự bung đỉnh chóp HOÀNG PHÁT - HỒNG TRƠN
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-chop-hoang-phat-hong-tron-loai-tot-.html
 
 [manthutrang.com]
-match = -207.1%%
-title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
-url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
+match = -221.4%%
+title = Màn chụp tự bung cho người lớn: Tư vấn chọn mua và sử ...
+url = https://manthutrang.com/blogs/news/man-chup-tu-bung-cho-nguoi-lon-tu-van-chon-mua-va-su-dung
 
 [easydream.vn]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Màn chụp tự bung Gia Long 16x18x2cm - Loại 2 cửa
 url = https://boba.vn/man-chup-tu-bung-nguoi-lon/man-chup-tu-bung-gia-long-1-6-1-8x-2m-loai-2-cua
 
 [shopee.vn]
-match = -178.6%%
-title = Màn chụp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/màn chụp
+match = -128.6%%
+title = màn chụp giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp
 
 [text.egwwritings.org]
 match = -78.6%%
