--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-09 05:55:43
+lastsearch = 2024-08-09 11:57:24
 
 [www.mantubung.com]
 match = -100.0%%
@@ -72,9 +72,9 @@ title = Màn Chụp Chống Muỗi Tự Bung Cho Trẻ Em Evon Việt Nam
 url = https://ichikobaby.com/san-pham/man-chup-chong-muoi-tu-bung-cho-tre-em-evon-viet-nam/
 
 [www.lazada.vn]
-match = -33.3%%
-title = Màn chụp tự bung dành cho trẻ em không cửa
-url = https://www.lazada.vn/products/man-chup-tu-bung-danh-cho-tre-em-khong-cua-i1739891044.html
+match = -116.7%%
+title = Màn Chụp Cho Bé Gấp Gọn, Mùng Chụp Tự Bung Chống ...
+url = https://www.lazada.vn/products/man-chup-cho-be-gap-gon-mung-chup-tu-bung-chong-muoi-tre-em-dung-cho-che-giuong-va-noi-cui-tien-loi-i1531954275.html
 
 [www.mungbaobao.com]
 match = -5.6%%
