--- a/images/ruot-goi-vuong-warmdream-45x45/config.ini
+++ b/images/ruot-goi-vuong-warmdream-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-vuong-warmdream-45x45.html
 lastopen = 2024-06-07 01:58:20
 
 [search]
-lastsearch = 2024-08-09 09:24:21
+lastsearch = 2024-08-09 11:50:27
 
 [bellizeno.com]
 match = -14.3%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Gối-vuông-trang-trí-gối-sofa-đơn-giản-(có-kè
 [happynest.vn]
 match = -43.3%%
 title = Gối Vuông Trang Trí, Gối Sofa Đơn Giản Có Kèm Ruột Gối ...
-url = https://happynest.vn/shop/0902002405/goi-vuong-trang-tri,-goi-sofa-don-gian-co-kem-ruot-goi-make-my-home-tropical-5.html
+url = https://happynest.vn/shop/0902001709/goi-vuong-trang-tri,-goi-sofa-don-gian-co-kem-ruot-goi-make-my-home-piece-9.html
 
 [sieuthicholon.com]
 match = -30.0%%
@@ -67,9 +67,9 @@ title = Gối tựa Đệm Xanh giá rẻ tại Hà Nội
 url = https://demxanh.com/goi-tua-dem-xanh.html
 
 [www.lazada.vn]
-match = 26.7%%
-title = Vỏ Gối Vuông 60x60 Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/?page=39
+match = 3.3%%
+title = Ruột gối vuông , gối vương cao cấp hàng cao cấp
+url = https://www.lazada.vn/products/ruot-goi-vuong-goi-vuong-cao-cap-hang-cao-cap-i2405233379.html
 
 [www.fortheloveofport.com]
 match = -13.0%%
@@ -144,5 +144,5 @@ url = https://vn.biggo.com/s/ruột+gối+bông+gòn+cao+cấp/
 [metric.vn]
 match = -23.3%%
 title = Báo cáo thị trường Ruột gối vuông dành cho doanh nghiệp
-url = https://metric.vn/ruot-goi-vuong?srsltid=AfmBOopE2Xgn93LweZhmp6UHaiDWG1uKRvbJHriH3e0TG8nvKMq910dy
+url = https://metric.vn/ruot-goi-vuong
 
