--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -37,9 +37,9 @@ title = Tūī
 url = https://davidtrubridge.com/au/lighting/tui
 
 [www.linkedin.com]
-match = 10.0%%
-title = TUI's Post
-url = https://www.linkedin.com/posts/tuigroup_???-???-????-????-the-activity-7169328748431925248-2RWQ
+match = -50.0%%
+title = Tui Allen - Ticketmaster
+url = https://www.linkedin.com/in/tuiallen
 
 [www.diepxuan.com]
 match = -133.3%%
@@ -312,8 +312,8 @@ title = TUI Group's Latest Move Toward World Conquest
 url = https://www.argophilia.com/news/tui-groups-latest-move-toward-world-conquest/234953/
 
 [www.pinterest.ca]
-match = -350.0%%
-title = 16 Chồng tui ideas in 2024 | byeon woo-seok, kdrama actors ...
+match = -283.3%%
+title = chồng tui - byeon woo-seok, kdrama actors, korean actors
 url = https://www.pinterest.ca/yennguyen5314/chồng-tui/
 
 [fi.linkedin.com]
