CI images update

--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-09 05:58:22
+lastsearch = 2024-08-09 12:18:46
 
 [shopee.vn]
-match = 52.2%%
-title = Chiếu điều hoà siêu mát
-url = https://shopee.vn/Chiếu-điều-hoà-siêu-mát-i.62996878.1387569555
+match = -40.7%%
+title = Chiếu mây điều hòa, chiếu điều hòa nhật bản loại dày cao ...
+url = https://shopee.vn/Chiếu-mây-điều-hòa-chiếu-điều-hòa-nhật-bản-loại-dày-cao-cấp-thông-minh-siêu-mát-và-siêu-thoáng-đủ-kích-thước-i.458989698.24414242012
 
 [demxanh.com]
-match = 22.2%%
-title = Chiếu điều hòa cao su non đa sắc tím than
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
+match = -14.8%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [tiki.vn]
 match = 33.3%%
