--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-09 10:20:17
+lastsearch = 2024-08-09 12:23:27
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -272.7%%
-title = Có bán Đệm giường đôi lớn tại Lakeville, Minnesota
-url = https://www.facebook.com/marketplace/109260755766991/queen-mattresses/?locale=vi_VN
+match = -254.5%%
+title = Có bán Vách đầu giường tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/headboards-footboards/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -107,9 +107,9 @@ title = Giường MN 5
 url = http://thietbimamnontienloc.com/san-pham/giuong-mn-5-253.html
 
 [www.airbnb.com.vn]
-match = -309.1%%
-title = Phòng 1 Giường cỡ King 2 Phòng tại Bloomington - Airbnb
-url = https://www.airbnb.com.vn/rooms/929459059736966278
+match = -318.2%%
+title = Phòng tiêu chuẩn 1 giường đôi tại Millennium Minneapolis
+url = https://www.airbnb.com.vn/hotels/1059440610457947224
 
 [freemeteo.cl]
 match = -281.8%%
@@ -123,7 +123,7 @@ url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
 
 [www.agoda.com]
 match = -354.5%%
-title = AmericInn by Wyndham Proctor Duluth Black Woods Conv Ctr
+title = AmericInn by Wyndham Proctor Duluth Black Woods Conv ...
 url = https://www.agoda.com/vi-vn/americinn-by-wyndham-proctor-duluth-black-woods-conv-ctr/hotel/proctor-mn-us.html
 
 [sumika.vn]
@@ -200,4 +200,9 @@ url = https://www.tiktok.com/@famovereverythingg/video/7398777305557978398
 match = -300.0%%
 title = SUITE Hướng Sông 1 Giường Đôi - Ben Tre Riverside ...
 url = https://bentreriverside.com/room/suite-huong-song-1-giuong-doi/
+
+[freemeteo.mn]
+match = -163.6%%
+title = Xom Giuong (2), Vietnam Current Weather
+url = https://freemeteo.mn/mobile/weather/xom-giuong-2/current-weather/location/?gid=1561484&language=english&country=vietnam
 
