--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-09 09:59:30
+lastsearch = 2024-08-09 12:27:57
 
 [ninhouse.vn]
 match = -146.2%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOoox436_jH_EMVdxUoJEQ1ft0l-oYPc-Q9DEWtHVtmnybL-4dQos
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [www.lamido.vn]
 match = 46.2%%
@@ -82,9 +82,9 @@ title = Vietnamese-English dictionary - translation
 url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
-match = -153.8%%
-title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
+match = -115.4%%
+title = Áo gối nằm (đôi) mẫu đẹp- Được chọn mẫu
+url = https://shopee.vn/Áo-gối-nằm-(đôi)-mẫu-đẹp-Được-chọn-mẫu-i.18452594.20233541354
 
 [songhong.info]
 match = -161.5%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -238.5%%
 title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi?srsltid=AfmBOopyvvPmV1taogFiAQm7cq2jtcMp1pZwRABePOpKc9E3wwQb9apa
+url = https://jysk.vn/vo-goi
 
 [www.everonvn.vn]
 match = 15.4%%
